--- a/components/DateObjectRendererComponent.html
+++ b/components/DateObjectRendererComponent.html
@@ -124,6 +124,14 @@
 </p>
 
 
+    <p class="comment">
+        <h3>Description</h3>
+    </p>
+    <p class="comment">
+        <p>This component provides date input functionality and configuration
+options for displaying dates and times.</p>
+
+    </p>
 
     <p class="comment">
         <h3>Extends</h3>
@@ -310,14 +318,17 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="60"
-                                    class="link-to-prism">lib/src/components/explorer/src/renderer/default/object/date/date-object-renderer.component.ts:60</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="74"
+                                    class="link-to-prism">lib/src/components/explorer/src/renderer/default/object/date/date-object-renderer.component.ts:74</a></div>
                         </td>
                     </tr>
 
 
             <tr>
                 <td class="col-md-4">
+                        <div class="io-description"><p>Initializes the component by setting the initial date value and
+configuring the input based on the parameters.</p>
+</div>
 
                         <div class="io-description">
                             <b>Returns : </b>        <code><a href="https://www.typescriptlang.org/docs/handbook/basic-types.html" target="_blank" >void</a></code>
@@ -352,10 +363,16 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="45" class="link-to-prism">lib/src/components/explorer/src/renderer/default/object/date/date-object-renderer.component.ts:45</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="50" class="link-to-prism">lib/src/components/explorer/src/renderer/default/object/date/date-object-renderer.component.ts:50</a></div>
                         </td>
                     </tr>
 
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-description"><p>Unique identifier for the component instance.</p>
+</div>
+                </td>
+            </tr>
 
         </tbody>
     </table>
@@ -391,10 +408,16 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="46" class="link-to-prism">lib/src/components/explorer/src/renderer/default/object/date/date-object-renderer.component.ts:46</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="52" class="link-to-prism">lib/src/components/explorer/src/renderer/default/object/date/date-object-renderer.component.ts:52</a></div>
                         </td>
                     </tr>
 
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-description"><p>Parameters for rendering the date object.</p>
+</div>
+                </td>
+            </tr>
 
         </tbody>
     </table>
@@ -423,11 +446,17 @@
                         </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in         <code><a href="../classes/AbstractExplorerObjectRenderer.html#source" target="_self" >AbstractExplorerObjectRenderer:23</a></code>
+                                <div class="io-line">Defined in         <code><a href="../classes/AbstractExplorerObjectRenderer.html#source" target="_self" >AbstractExplorerObjectRenderer:31</a></code>
 </div>
                         </td>
                     </tr>
 
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-description"><p>The column definition used for rendering the object.</p>
+</div>
+                </td>
+            </tr>
 
         </tbody>
     </table>
@@ -456,11 +485,17 @@
                         </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in         <code><a href="../classes/AbstractExplorerObjectRenderer.html#source" target="_self" >AbstractExplorerObjectRenderer:25</a></code>
+                                <div class="io-line">Defined in         <code><a href="../classes/AbstractExplorerObjectRenderer.html#source" target="_self" >AbstractExplorerObjectRenderer:35</a></code>
 </div>
                         </td>
                     </tr>
 
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-description"><p>The data for the object to be rendered.</p>
+</div>
+                </td>
+            </tr>
 
         </tbody>
     </table>
@@ -489,11 +524,17 @@
                         </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in         <code><a href="../classes/AbstractExplorerObjectRenderer.html#source" target="_self" >AbstractExplorerObjectRenderer:27</a></code>
+                                <div class="io-line">Defined in         <code><a href="../classes/AbstractExplorerObjectRenderer.html#source" target="_self" >AbstractExplorerObjectRenderer:39</a></code>
 </div>
                         </td>
                     </tr>
 
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-description"><p>The form group associated with the entity.</p>
+</div>
+                </td>
+            </tr>
 
         </tbody>
     </table>
@@ -522,11 +563,17 @@
                         </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in         <code><a href="../classes/AbstractExplorerObjectRenderer.html#source" target="_self" >AbstractExplorerObjectRenderer:24</a></code>
+                                <div class="io-line">Defined in         <code><a href="../classes/AbstractExplorerObjectRenderer.html#source" target="_self" >AbstractExplorerObjectRenderer:33</a></code>
 </div>
                         </td>
                     </tr>
 
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-description"><p>Parameters for customizing the renderer&#39;s behavior.</p>
+</div>
+                </td>
+            </tr>
 
         </tbody>
     </table>
@@ -555,11 +602,17 @@
                         </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in         <code><a href="../classes/AbstractExplorerObjectRenderer.html#source" target="_self" >AbstractExplorerObjectRenderer:26</a></code>
+                                <div class="io-line">Defined in         <code><a href="../classes/AbstractExplorerObjectRenderer.html#source" target="_self" >AbstractExplorerObjectRenderer:37</a></code>
 </div>
                         </td>
                     </tr>
 
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-description"><p>The entity data associated with this object.</p>
+</div>
+                </td>
+            </tr>
 
         </tbody>
     </table>
@@ -585,9 +638,18 @@
                 </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="56" class="link-to-prism">lib/src/components/explorer/src/renderer/default/object/date/date-object-renderer.component.ts:56</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="66" class="link-to-prism">lib/src/components/explorer/src/renderer/default/object/date/date-object-renderer.component.ts:66</a></div>
                                 </td>
                             </tr>
+                    <tr>
+                        <td class="col-md-4">
+                                <div class="io-description"><p>Gets the current date.</p>
+</div>
+
+                                <div>
+                                </div>
+                        </td>
+                    </tr>
 
             </tbody>
         </table>
@@ -606,6 +668,10 @@ import {LocalizePipe} from &quot;../../../../../../../modules/locale&quot;;
 import {AbstractExplorerObjectRenderer} from &quot;../../abstract-explorer-object-renderer&quot;;
 import {NumberUtils} from &quot;../../../../../../../global/util&quot;;
 
+/**
+ * This component provides date input functionality and configuration
+ * options for displaying dates and times.
+ */
 @Component({
   selector: &quot;date-object-renderer&quot;,
   standalone: true,
@@ -624,7 +690,9 @@ import {NumberUtils} from &quot;../../../../../../../global/util&quot;;
 export class DateObjectRendererComponent
   extends AbstractExplorerObjectRenderer&lt;string, unknown, DateObjectRendererParams&gt; implements OnInit {
 
+  /** Unique identifier for the component instance. */
   readonly id &#x3D; NumberUtils.getRandomInt().toString();
+  /** Parameters for rendering the date object. */
   rendererParams: DateObjectRendererParams &#x3D; {
     showCalendar: true,
     dateFormat: &quot;medium&quot;,
@@ -635,10 +703,18 @@ export class DateObjectRendererComponent
     inline: true
   };
 
+  /**
+   * Gets the current date.
+   * @returns The current date.
+   */
   get currentDate(){
     return new Date();
   }
 
+  /**
+   * Initializes the component by setting the initial date value and
+   * configuring the input based on the parameters.
+   */
   ngOnInit(): void {
     this.ctrl.setValue(this.ctrl.value ? new Date(this.ctrl.value) : this.currentDate);
     if (this.params) {
