--- a/components/ImagesStatsMediaObjectRendererComponent.html
+++ b/components/ImagesStatsMediaObjectRendererComponent.html
@@ -124,6 +124,13 @@
 </p>
 
 
+    <p class="comment">
+        <h3>Description</h3>
+    </p>
+    <p class="comment">
+        <p>This component displays media file statistics and handles duplicates.</p>
+
+    </p>
 
     <p class="comment">
         <h3>Extends</h3>
@@ -307,10 +314,16 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="45" class="link-to-prism">lib/src/components/explorer/src/renderer/custom/object/images-stats/images-stats-media-object-renderer.component.ts:45</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="50" class="link-to-prism">lib/src/components/explorer/src/renderer/custom/object/images-stats/images-stats-media-object-renderer.component.ts:50</a></div>
                         </td>
                     </tr>
 
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-description"><p>The base URL for media resources.</p>
+</div>
+                </td>
+            </tr>
 
         </tbody>
     </table>
@@ -334,10 +347,16 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="46" class="link-to-prism">lib/src/components/explorer/src/renderer/custom/object/images-stats/images-stats-media-object-renderer.component.ts:46</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="52" class="link-to-prism">lib/src/components/explorer/src/renderer/custom/object/images-stats/images-stats-media-object-renderer.component.ts:52</a></div>
                         </td>
                     </tr>
 
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-description"><p>Pipe for transforming media URLs.</p>
+</div>
+                </td>
+            </tr>
 
         </tbody>
     </table>
@@ -366,11 +385,17 @@
                         </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in         <code><a href="../classes/AbstractExplorerObjectRenderer.html#source" target="_self" >AbstractExplorerObjectRenderer:23</a></code>
+                                <div class="io-line">Defined in         <code><a href="../classes/AbstractExplorerObjectRenderer.html#source" target="_self" >AbstractExplorerObjectRenderer:31</a></code>
 </div>
                         </td>
                     </tr>
 
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-description"><p>The column definition used for rendering the object.</p>
+</div>
+                </td>
+            </tr>
 
         </tbody>
     </table>
@@ -399,11 +424,17 @@
                         </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in         <code><a href="../classes/AbstractExplorerObjectRenderer.html#source" target="_self" >AbstractExplorerObjectRenderer:25</a></code>
+                                <div class="io-line">Defined in         <code><a href="../classes/AbstractExplorerObjectRenderer.html#source" target="_self" >AbstractExplorerObjectRenderer:35</a></code>
 </div>
                         </td>
                     </tr>
 
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-description"><p>The data for the object to be rendered.</p>
+</div>
+                </td>
+            </tr>
 
         </tbody>
     </table>
@@ -432,11 +463,17 @@
                         </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in         <code><a href="../classes/AbstractExplorerObjectRenderer.html#source" target="_self" >AbstractExplorerObjectRenderer:27</a></code>
+                                <div class="io-line">Defined in         <code><a href="../classes/AbstractExplorerObjectRenderer.html#source" target="_self" >AbstractExplorerObjectRenderer:39</a></code>
 </div>
                         </td>
                     </tr>
 
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-description"><p>The form group associated with the entity.</p>
+</div>
+                </td>
+            </tr>
 
         </tbody>
     </table>
@@ -465,11 +502,17 @@
                         </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in         <code><a href="../classes/AbstractExplorerObjectRenderer.html#source" target="_self" >AbstractExplorerObjectRenderer:24</a></code>
+                                <div class="io-line">Defined in         <code><a href="../classes/AbstractExplorerObjectRenderer.html#source" target="_self" >AbstractExplorerObjectRenderer:33</a></code>
 </div>
                         </td>
                     </tr>
 
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-description"><p>Parameters for customizing the renderer&#39;s behavior.</p>
+</div>
+                </td>
+            </tr>
 
         </tbody>
     </table>
@@ -498,11 +541,17 @@
                         </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in         <code><a href="../classes/AbstractExplorerObjectRenderer.html#source" target="_self" >AbstractExplorerObjectRenderer:26</a></code>
+                                <div class="io-line">Defined in         <code><a href="../classes/AbstractExplorerObjectRenderer.html#source" target="_self" >AbstractExplorerObjectRenderer:37</a></code>
 </div>
                         </td>
                     </tr>
 
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-description"><p>The entity data associated with this object.</p>
+</div>
+                </td>
+            </tr>
 
         </tbody>
     </table>
@@ -528,9 +577,18 @@
                 </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="48" class="link-to-prism">lib/src/components/explorer/src/renderer/custom/object/images-stats/images-stats-media-object-renderer.component.ts:48</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="58" class="link-to-prism">lib/src/components/explorer/src/renderer/custom/object/images-stats/images-stats-media-object-renderer.component.ts:58</a></div>
                                 </td>
                             </tr>
+                    <tr>
+                        <td class="col-md-4">
+                                <div class="io-description"><p>Gets the thumbnail URL for the media object.</p>
+</div>
+
+                                <div>
+                                </div>
+                        </td>
+                    </tr>
 
             </tbody>
         </table>
@@ -550,9 +608,18 @@
                 </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="52" class="link-to-prism">lib/src/components/explorer/src/renderer/custom/object/images-stats/images-stats-media-object-renderer.component.ts:52</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="66" class="link-to-prism">lib/src/components/explorer/src/renderer/custom/object/images-stats/images-stats-media-object-renderer.component.ts:66</a></div>
                                 </td>
                             </tr>
+                    <tr>
+                        <td class="col-md-4">
+                                <div class="io-description"><p>Gets the URL for the media object.</p>
+</div>
+
+                                <div>
+                                </div>
+                        </td>
+                    </tr>
 
             </tbody>
         </table>
@@ -572,9 +639,18 @@
                 </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="56" class="link-to-prism">lib/src/components/explorer/src/renderer/custom/object/images-stats/images-stats-media-object-renderer.component.ts:56</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="75" class="link-to-prism">lib/src/components/explorer/src/renderer/custom/object/images-stats/images-stats-media-object-renderer.component.ts:75</a></div>
                                 </td>
                             </tr>
+                    <tr>
+                        <td class="col-md-4">
+                                <div class="io-description"><p>Retrieves the media object being rendered.</p>
+</div>
+
+                                <div>
+                                </div>
+                        </td>
+                    </tr>
 
             </tbody>
         </table>
@@ -594,9 +670,22 @@
                 </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="60" class="link-to-prism">lib/src/components/explorer/src/renderer/custom/object/images-stats/images-stats-media-object-renderer.component.ts:60</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="83" class="link-to-prism">lib/src/components/explorer/src/renderer/custom/object/images-stats/images-stats-media-object-renderer.component.ts:83</a></div>
                                 </td>
                             </tr>
+                    <tr>
+                        <td class="col-md-4">
+                                <div class="io-description"><p>Gets a list of files associated with the media, including duplicates.</p>
+</div>
+
+                                <div>
+                                </div>
+                                <div class="io-description">
+                                    <b>Returns : </b>    <code>ImagesStatFileItem[]</code>
+
+                                </div>
+                        </td>
+                    </tr>
 
             </tbody>
         </table>
@@ -617,6 +706,10 @@ import {ReservedMediaFormat} from &quot;../../../../../../../modules/media&quot;
 import {Media} from &quot;../../../../../../../modules/media&quot;;
 import {MEDIA_URL} from &quot;../../../../../../../global/vars&quot;;
 
+
+/**
+ * This component displays media file statistics and handles duplicates.
+ */
 @Component({
   selector: &quot;images-stats-media-object-renderer&quot;,
   standalone: true,
@@ -633,22 +726,41 @@ import {MEDIA_URL} from &quot;../../../../../../../global/vars&quot;;
 })
 export class ImagesStatsMediaObjectRendererComponent extends AbstractExplorerObjectRenderer {
 
+  /** The base URL for media resources. */
   private readonly mediaUrl &#x3D; inject(MEDIA_URL);
+  /** Pipe for transforming media URLs. */
   private readonly mediaUrlPipe &#x3D; inject(MediaUrlPipe);
 
+  /**
+   * Gets the thumbnail URL for the media object.
+   * @returns The transformed thumbnail URL.
+   */
   get thumbUrl() {
     return this.mediaUrlPipe.transform(this.media, ReservedMediaFormat.THUMB);
   }
 
+  /**
+   * Gets the URL for the media object.
+   * @returns The constructed media URL.
+   */
   get url() {
     return &#x60;${this.mediaUrl}/${this.media.id}&#x60;;
   }
 
+
+  /**
+   * Retrieves the media object being rendered.
+   * @returns The media object.
+   */
   get media() {
     return this.data as unknown as Media;
   }
 
-  get files() {
+  /**
+   * Gets a list of files associated with the media, including duplicates.
+   * @returns {ImagesStatFileItem[]} The list of media files with duplicates.
+   */
+  get files(): ImagesStatFileItem[] {
     const res: ImagesStatFileItem[] &#x3D; [];
     if (!this.media?.files) {
       return res;
