--- a/components/NewPasswordObjectRendererComponent.html
+++ b/components/NewPasswordObjectRendererComponent.html
@@ -124,6 +124,14 @@
 </p>
 
 
+    <p class="comment">
+        <h3>Description</h3>
+    </p>
+    <p class="comment">
+        <p>This component allows users to set a new password with validation
+and checks for matching passwords.</p>
+
+    </p>
 
     <p class="comment">
         <h3>Extends</h3>
@@ -299,14 +307,16 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="56"
-                                    class="link-to-prism">lib/src/components/explorer/src/renderer/custom/object/new-password/new-password-object-renderer.component.ts:56</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="65"
+                                    class="link-to-prism">lib/src/components/explorer/src/renderer/custom/object/new-password/new-password-object-renderer.component.ts:65</a></div>
                         </td>
                     </tr>
 
 
             <tr>
                 <td class="col-md-4">
+                        <div class="io-description"><p>Initializes the component and sets up validation rules for the password fields.</p>
+</div>
 
                         <div class="io-description">
                             <b>Returns : </b>        <code><a href="https://www.typescriptlang.org/docs/handbook/basic-types.html" target="_blank" >void</a></code>
@@ -341,10 +351,16 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="50" class="link-to-prism">lib/src/components/explorer/src/renderer/custom/object/new-password/new-password-object-renderer.component.ts:50</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="55" class="link-to-prism">lib/src/components/explorer/src/renderer/custom/object/new-password/new-password-object-renderer.component.ts:55</a></div>
                         </td>
                     </tr>
 
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-description"><p>Form group for managing password inputs.</p>
+</div>
+                </td>
+            </tr>
 
         </tbody>
     </table>
@@ -368,7 +384,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="54" class="link-to-prism">lib/src/components/explorer/src/renderer/custom/object/new-password/new-password-object-renderer.component.ts:54</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="60" class="link-to-prism">lib/src/components/explorer/src/renderer/custom/object/new-password/new-password-object-renderer.component.ts:60</a></div>
                         </td>
                     </tr>
 
@@ -401,10 +417,16 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="51" class="link-to-prism">lib/src/components/explorer/src/renderer/custom/object/new-password/new-password-object-renderer.component.ts:51</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="57" class="link-to-prism">lib/src/components/explorer/src/renderer/custom/object/new-password/new-password-object-renderer.component.ts:57</a></div>
                         </td>
                     </tr>
 
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-description"><p>Parameters for rendering the new password input.</p>
+</div>
+                </td>
+            </tr>
 
         </tbody>
     </table>
@@ -433,11 +455,17 @@
                         </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in         <code><a href="../classes/AbstractExplorerObjectRenderer.html#source" target="_self" >AbstractExplorerObjectRenderer:23</a></code>
+                                <div class="io-line">Defined in         <code><a href="../classes/AbstractExplorerObjectRenderer.html#source" target="_self" >AbstractExplorerObjectRenderer:31</a></code>
 </div>
                         </td>
                     </tr>
 
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-description"><p>The column definition used for rendering the object.</p>
+</div>
+                </td>
+            </tr>
 
         </tbody>
     </table>
@@ -466,11 +494,17 @@
                         </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in         <code><a href="../classes/AbstractExplorerObjectRenderer.html#source" target="_self" >AbstractExplorerObjectRenderer:25</a></code>
+                                <div class="io-line">Defined in         <code><a href="../classes/AbstractExplorerObjectRenderer.html#source" target="_self" >AbstractExplorerObjectRenderer:35</a></code>
 </div>
                         </td>
                     </tr>
 
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-description"><p>The data for the object to be rendered.</p>
+</div>
+                </td>
+            </tr>
 
         </tbody>
     </table>
@@ -499,11 +533,17 @@
                         </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in         <code><a href="../classes/AbstractExplorerObjectRenderer.html#source" target="_self" >AbstractExplorerObjectRenderer:27</a></code>
+                                <div class="io-line">Defined in         <code><a href="../classes/AbstractExplorerObjectRenderer.html#source" target="_self" >AbstractExplorerObjectRenderer:39</a></code>
 </div>
                         </td>
                     </tr>
 
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-description"><p>The form group associated with the entity.</p>
+</div>
+                </td>
+            </tr>
 
         </tbody>
     </table>
@@ -532,11 +572,17 @@
                         </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in         <code><a href="../classes/AbstractExplorerObjectRenderer.html#source" target="_self" >AbstractExplorerObjectRenderer:24</a></code>
+                                <div class="io-line">Defined in         <code><a href="../classes/AbstractExplorerObjectRenderer.html#source" target="_self" >AbstractExplorerObjectRenderer:33</a></code>
 </div>
                         </td>
                     </tr>
 
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-description"><p>Parameters for customizing the renderer&#39;s behavior.</p>
+</div>
+                </td>
+            </tr>
 
         </tbody>
     </table>
@@ -565,11 +611,17 @@
                         </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in         <code><a href="../classes/AbstractExplorerObjectRenderer.html#source" target="_self" >AbstractExplorerObjectRenderer:26</a></code>
+                                <div class="io-line">Defined in         <code><a href="../classes/AbstractExplorerObjectRenderer.html#source" target="_self" >AbstractExplorerObjectRenderer:37</a></code>
 </div>
                         </td>
                     </tr>
 
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-description"><p>The entity data associated with this object.</p>
+</div>
+                </td>
+            </tr>
 
         </tbody>
     </table>
@@ -596,6 +648,10 @@ import {takeUntilDestroyed} from &quot;@angular/core/rxjs-interop&quot;;
 import {LocalizePipe} from &quot;../../../../../../../modules/locale&quot;;
 import {AbstractExplorerObjectRenderer} from &quot;../../../default/abstract-explorer-object-renderer&quot;;
 
+/**
+ * This component allows users to set a new password with validation
+ * and checks for matching passwords.
+ */
 @Component({
   selector: &quot;new-password-object-renderer&quot;,
   standalone: true,
@@ -612,12 +668,17 @@ import {AbstractExplorerObjectRenderer} from &quot;../../../default/abstract-exp
 export class NewPasswordObjectRendererComponent
   extends AbstractExplorerObjectRenderer&lt;string, unknown, NewPasswordObjectRendererParams&gt; implements OnInit {
 
+  /** Form group for managing password inputs. */
   readonly form &#x3D; createNewPasswordObjectRendererForm();
+  /** Parameters for rendering the new password input. */
   rendererParams: NewPasswordObjectRendererParams &#x3D; {
     minLength: 4
   };
   private readonly injector &#x3D; inject(Injector);
 
+  /**
+   * Initializes the component and sets up validation rules for the password fields.
+   */
   ngOnInit(): void {
     if (this.params) {
       Object.assign(this.rendererParams, this.params);
