--- a/components/ReCreateMediaActionRendererComponent.html
+++ b/components/ReCreateMediaActionRendererComponent.html
@@ -120,6 +120,15 @@
 </p>
 
 
+    <p class="comment">
+        <h3>Description</h3>
+    </p>
+    <p class="comment">
+        <p>This component provides functionality to confirm and re-create a media file
+after user interaction. It relies on a confirmation dialog to ensure the user
+intends to proceed with the action.</p>
+
+    </p>
 
     <p class="comment">
         <h3>Extends</h3>
@@ -311,14 +320,19 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="62"
-                                    class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/media/recreate/re-create-media-action-renderer.component.ts:62</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="79"
+                                    class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/media/recreate/re-create-media-action-renderer.component.ts:79</a></div>
                         </td>
                     </tr>
 
 
             <tr>
                 <td class="col-md-4">
+                        <div class="io-description"><p>This method displays a confirmation dialog, and upon acceptance,
+it calls the media service to re-create the media file using its ID.
+It also manages the loading state during the operation and emits
+events based on the outcome of the re-creation process.</p>
+</div>
 
                         <div class="io-description">
                             <b>Returns : </b>        <code><a href="https://www.typescriptlang.org/docs/handbook/basic-types.html" target="_blank" >void</a></code>
@@ -354,7 +368,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="54" class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/media/recreate/re-create-media-action-renderer.component.ts:54</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="60" class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/media/recreate/re-create-media-action-renderer.component.ts:60</a></div>
                         </td>
                     </tr>
 
@@ -386,10 +400,16 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="53" class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/media/recreate/re-create-media-action-renderer.component.ts:53</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="59" class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/media/recreate/re-create-media-action-renderer.component.ts:59</a></div>
                         </td>
                     </tr>
 
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-description"><p>Key for the confirmation dialog.</p>
+</div>
+                </td>
+            </tr>
 
         </tbody>
     </table>
@@ -413,7 +433,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="56" class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/media/recreate/re-create-media-action-renderer.component.ts:56</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="62" class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/media/recreate/re-create-media-action-renderer.component.ts:62</a></div>
                         </td>
                     </tr>
 
@@ -440,7 +460,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="55" class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/media/recreate/re-create-media-action-renderer.component.ts:55</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="61" class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/media/recreate/re-create-media-action-renderer.component.ts:61</a></div>
                         </td>
                     </tr>
 
@@ -472,11 +492,17 @@
                         </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in         <code><a href="../classes/AbstractExplorerActionRenderer.html#source" target="_self" >AbstractExplorerActionRenderer:25</a></code>
+                                <div class="io-line">Defined in         <code><a href="../classes/AbstractExplorerActionRenderer.html#source" target="_self" >AbstractExplorerActionRenderer:34</a></code>
 </div>
                         </td>
                     </tr>
 
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-description"><p>The action-data to be rendered.</p>
+</div>
+                </td>
+            </tr>
 
         </tbody>
     </table>
@@ -505,11 +531,17 @@
                         </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in         <code><a href="../classes/AbstractExplorerActionRenderer.html#source" target="_self" >AbstractExplorerActionRenderer:23</a></code>
+                                <div class="io-line">Defined in         <code><a href="../classes/AbstractExplorerActionRenderer.html#source" target="_self" >AbstractExplorerActionRenderer:30</a></code>
 </div>
                         </td>
                     </tr>
 
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-description"><p>The data for the actions to be rendered.</p>
+</div>
+                </td>
+            </tr>
 
         </tbody>
     </table>
@@ -538,11 +570,17 @@
                         </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in         <code><a href="../classes/AbstractExplorerActionRenderer.html#source" target="_self" >AbstractExplorerActionRenderer:24</a></code>
+                                <div class="io-line">Defined in         <code><a href="../classes/AbstractExplorerActionRenderer.html#source" target="_self" >AbstractExplorerActionRenderer:32</a></code>
 </div>
                         </td>
                     </tr>
 
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-description"><p>The form group managing the entity data associated with the actions.</p>
+</div>
+                </td>
+            </tr>
 
         </tbody>
     </table>
@@ -571,11 +609,17 @@
                         </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in         <code><a href="../classes/AbstractExplorerActionRenderer.html#source" target="_self" >AbstractExplorerActionRenderer:22</a></code>
+                                <div class="io-line">Defined in         <code><a href="../classes/AbstractExplorerActionRenderer.html#source" target="_self" >AbstractExplorerActionRenderer:28</a></code>
 </div>
                         </td>
                     </tr>
 
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-description"><p>The target data associated with the actions.</p>
+</div>
+                </td>
+            </tr>
 
         </tbody>
     </table>
@@ -601,9 +645,19 @@
                 </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="58" class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/media/recreate/re-create-media-action-renderer.component.ts:58</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="69" class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/media/recreate/re-create-media-action-renderer.component.ts:69</a></div>
                                 </td>
                             </tr>
+                    <tr>
+                        <td class="col-md-4">
+                                <div class="io-description"><p>This method returns the channel used for indicating loading state
+during the media re-creation process.</p>
+</div>
+
+                                <div>
+                                </div>
+                        </td>
+                    </tr>
 
             </tbody>
         </table>
@@ -631,6 +685,11 @@ import {Explorer, ExplorerEvent} from &quot;../../../../../../../explorer&quot;;
 import {ToastData, ToastEvent} from &quot;../../../../../../../../global/vars&quot;;
 import {usePreloader} from &quot;../../../../../../../../modules/preloader/src/use-preloader&quot;;
 
+/**
+ * This component provides functionality to confirm and re-create a media file
+ * after user interaction. It relies on a confirmation dialog to ensure the user
+ * intends to proceed with the action.
+ */
 @Component({
   selector: &quot;re-create-media-action-renderer&quot;,
   standalone: true,
@@ -647,16 +706,28 @@ import {usePreloader} from &quot;../../../../../../../../modules/preloader/src/u
   ],
 })
 export class ReCreateMediaActionRendererComponent extends AbstractExplorerActionRenderer {
+  /** Key for the confirmation dialog. */
 
   readonly dialogKey &#x3D; &quot;recreate-media-action-dialog&quot;;
   private readonly confirmationService &#x3D; inject(ConfirmationService);
   private readonly store &#x3D; inject(Store);
   private readonly service &#x3D; inject(MediaService);
 
+  /**
+   * This method returns the channel used for indicating loading state
+   * during the media re-creation process.
+   * @returns The preloader channel identifier.
+   */
   private get preloaderChannel() {
     return Explorer.ObjectPreloaderCn;
   }
 
+  /**
+   * This method displays a confirmation dialog, and upon acceptance,
+   * it calls the media service to re-create the media file using its ID.
+   * It also manages the loading state during the operation and emits
+   * events based on the outcome of the re-creation process.
+   */
   reCreateMedia() {
     this.confirmationService.confirm({
       key: this.dialogKey,
