--- a/components/ReferenceSectionRendererComponent.html
+++ b/components/ReferenceSectionRendererComponent.html
@@ -120,6 +120,15 @@
 </p>
 
 
+    <p class="comment">
+        <h3>Description</h3>
+    </p>
+    <p class="comment">
+        <p>This component inherits from the AbstractExplorerSectionRenderer
+and handles references to other entities. It retrieves the
+referenced entity data and formats it for display.</p>
+
+    </p>
 
     <p class="comment">
         <h3>Extends</h3>
@@ -312,14 +321,17 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="89"
-                                    class="link-to-prism">lib/src/components/explorer/src/renderer/default/section/reference/reference-section-renderer.component.ts:89</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="107"
+                                    class="link-to-prism">lib/src/components/explorer/src/renderer/default/section/reference/reference-section-renderer.component.ts:107</a></div>
                         </td>
                     </tr>
 
 
             <tr>
                 <td class="col-md-4">
+                        <div class="io-description"><p>This method fetches the target data based on the column&#39;s referenced
+entity name and updates the component state accordingly.</p>
+</div>
 
                         <div class="io-description">
                             <b>Returns : </b>        <code><a href="https://www.typescriptlang.org/docs/handbook/basic-types.html" target="_blank" >void</a></code>
@@ -349,14 +361,17 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="85"
-                                    class="link-to-prism">lib/src/components/explorer/src/renderer/default/section/reference/reference-section-renderer.component.ts:85</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="99"
+                                    class="link-to-prism">lib/src/components/explorer/src/renderer/default/section/reference/reference-section-renderer.component.ts:99</a></div>
                         </td>
                     </tr>
 
 
             <tr>
                 <td class="col-md-4">
+                        <div class="io-description"><p>This lifecycle method is called once the component has been
+initialized and ensures that the reference target is set.</p>
+</div>
 
                         <div class="io-description">
                             <b>Returns : </b>        <code><a href="https://www.typescriptlang.org/docs/handbook/basic-types.html" target="_blank" >void</a></code>
@@ -392,7 +407,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="33" class="link-to-prism">lib/src/components/explorer/src/renderer/default/section/reference/reference-section-renderer.component.ts:33</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="38" class="link-to-prism">lib/src/components/explorer/src/renderer/default/section/reference/reference-section-renderer.component.ts:38</a></div>
                         </td>
                     </tr>
 
@@ -419,7 +434,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="34" class="link-to-prism">lib/src/components/explorer/src/renderer/default/section/reference/reference-section-renderer.component.ts:34</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="39" class="link-to-prism">lib/src/components/explorer/src/renderer/default/section/reference/reference-section-renderer.component.ts:39</a></div>
                         </td>
                     </tr>
 
@@ -446,7 +461,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="35" class="link-to-prism">lib/src/components/explorer/src/renderer/default/section/reference/reference-section-renderer.component.ts:35</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="40" class="link-to-prism">lib/src/components/explorer/src/renderer/default/section/reference/reference-section-renderer.component.ts:40</a></div>
                         </td>
                     </tr>
 
@@ -473,10 +488,16 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="36" class="link-to-prism">lib/src/components/explorer/src/renderer/default/section/reference/reference-section-renderer.component.ts:36</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="42" class="link-to-prism">lib/src/components/explorer/src/renderer/default/section/reference/reference-section-renderer.component.ts:42</a></div>
                         </td>
                     </tr>
 
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-description"><p>The reference target data for the entity.</p>
+</div>
+                </td>
+            </tr>
 
         </tbody>
     </table>
@@ -505,11 +526,17 @@
                         </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in         <code><a href="../classes/AbstractExplorerSectionRenderer.html#source" target="_self" >AbstractExplorerSectionRenderer:21</a></code>
+                                <div class="io-line">Defined in         <code><a href="../classes/AbstractExplorerSectionRenderer.html#source" target="_self" >AbstractExplorerSectionRenderer:30</a></code>
 </div>
                         </td>
                     </tr>
 
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-description"><p>The column definition used to configure the rendering of the section.</p>
+</div>
+                </td>
+            </tr>
 
         </tbody>
     </table>
@@ -538,11 +565,17 @@
                         </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in         <code><a href="../classes/AbstractExplorerSectionRenderer.html#source" target="_self" >AbstractExplorerSectionRenderer:23</a></code>
+                                <div class="io-line">Defined in         <code><a href="../classes/AbstractExplorerSectionRenderer.html#source" target="_self" >AbstractExplorerSectionRenderer:34</a></code>
 </div>
                         </td>
                     </tr>
 
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-description"><p>The data to be displayed in the section</p>
+</div>
+                </td>
+            </tr>
 
         </tbody>
     </table>
@@ -565,11 +598,17 @@
                         </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in         <code><a href="../classes/AbstractExplorerSectionRenderer.html#source" target="_self" >AbstractExplorerSectionRenderer:22</a></code>
+                                <div class="io-line">Defined in         <code><a href="../classes/AbstractExplorerSectionRenderer.html#source" target="_self" >AbstractExplorerSectionRenderer:32</a></code>
 </div>
                         </td>
                     </tr>
 
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-description"><p>Parameters that customize the behavior or appearance of the renderer.</p>
+</div>
+                </td>
+            </tr>
 
         </tbody>
     </table>
@@ -598,11 +637,17 @@
                         </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in         <code><a href="../classes/AbstractExplorerSectionRenderer.html#source" target="_self" >AbstractExplorerSectionRenderer:24</a></code>
+                                <div class="io-line">Defined in         <code><a href="../classes/AbstractExplorerSectionRenderer.html#source" target="_self" >AbstractExplorerSectionRenderer:36</a></code>
 </div>
                         </td>
                     </tr>
 
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-description"><p>The target data reference associated with this renderer.</p>
+</div>
+                </td>
+            </tr>
 
         </tbody>
     </table>
@@ -628,9 +673,18 @@
                 </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="38" class="link-to-prism">lib/src/components/explorer/src/renderer/default/section/reference/reference-section-renderer.component.ts:38</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="48" class="link-to-prism">lib/src/components/explorer/src/renderer/default/section/reference/reference-section-renderer.component.ts:48</a></div>
                                 </td>
                             </tr>
+                    <tr>
+                        <td class="col-md-4">
+                                <div class="io-description"><p>Retrieves the formatted value for the referenced entity data.</p>
+</div>
+
+                                <div>
+                                </div>
+                        </td>
+                    </tr>
 
             </tbody>
         </table>
@@ -646,6 +700,11 @@ import {LocalizePipe} from &quot;../../../../../../../modules/locale&quot;;
 import {TargetData} from &quot;../../../../../../explorer&quot;;
 import {LocalizedString} from &quot;../../../../../../../modules/locale&quot;;
 
+/**
+ * This component inherits from the AbstractExplorerSectionRenderer
+ * and handles references to other entities. It retrieves the
+ * referenced entity data and formats it for display.
+ */
 @Component({
   selector: &quot;reference-section-renderer&quot;,
   standalone: true,
@@ -658,8 +717,13 @@ export class ReferenceSectionRendererComponent extends AbstractExplorerSectionRe
   private readonly cachedExplorerService &#x3D; inject(CachedExplorerService);
   private readonly cdr &#x3D; inject(ChangeDetectorRef);
   private readonly localizePipe &#x3D; inject(LocalizePipe);
+  /** The reference target data for the entity. */
   private refTarget: TargetData;
 
+  /**
+   * Retrieves the formatted value for the referenced entity data.
+   * @returns The formatted value for the referenced data.
+   */
   get value() {
     if (!this.refTarget) {
       this.checkTarget();
@@ -707,10 +771,18 @@ export class ReferenceSectionRendererComponent extends AbstractExplorerSectionRe
     }
   }
 
+  /**
+   * This lifecycle method is called once the component has been
+   * initialized and ensures that the reference target is set.
+   */
   ngOnInit(): void {
     this.checkTarget();
   }
 
+  /**
+   * This method fetches the target data based on the column&#x27;s referenced
+   * entity name and updates the component state accordingly.
+   */
   private checkTarget() {
     this.cachedExplorerService.getTarget(this.column.referencedEntityName, &quot;section&quot;).subscribe(refTarget &#x3D;&gt; {
       this.refTarget &#x3D; refTarget;
