--- a/components/SectionFilterDialogComponent.html
+++ b/components/SectionFilterDialogComponent.html
@@ -124,6 +124,16 @@
 </p>
 
 
+    <p class="comment">
+        <h3>Description</h3>
+    </p>
+    <p class="comment">
+        <p>A dialog component for filtering sections.
+This component provides a user interface for applying filters to sections.
+It utilizes reactive forms to manage the state of the filter form,
+and incorporates localization support for internationalization.</p>
+
+    </p>
 
 
 
@@ -301,7 +311,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="65" class="link-to-prism">lib/src/components/explorer/src/section/filter/section-filter-dialog.component.ts:65</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="70" class="link-to-prism">lib/src/components/explorer/src/section/filter/section-filter-dialog.component.ts:70</a></div>
                         </td>
                     </tr>
 
@@ -328,7 +338,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="64" class="link-to-prism">lib/src/components/explorer/src/section/filter/section-filter-dialog.component.ts:64</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="69" class="link-to-prism">lib/src/components/explorer/src/section/filter/section-filter-dialog.component.ts:69</a></div>
                         </td>
                     </tr>
 
@@ -354,10 +364,16 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="66" class="link-to-prism">lib/src/components/explorer/src/section/filter/section-filter-dialog.component.ts:66</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="73" class="link-to-prism">lib/src/components/explorer/src/section/filter/section-filter-dialog.component.ts:73</a></div>
                         </td>
                     </tr>
 
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-description"><p>ViewModel for the section filter dialog.</p>
+</div>
+                </td>
+            </tr>
 
         </tbody>
     </table>
@@ -383,9 +399,24 @@
                 </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="68" class="link-to-prism">lib/src/components/explorer/src/section/filter/section-filter-dialog.component.ts:68</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="81" class="link-to-prism">lib/src/components/explorer/src/section/filter/section-filter-dialog.component.ts:81</a></div>
                                 </td>
                             </tr>
+                    <tr>
+                        <td class="col-md-4">
+                                <div class="io-description"><p>Checks if the ascending sort option is active for the current column.
+This getter returns true if the current sort property matches
+the column&#39;s property and the sort order is set to &#39;ASC&#39;.</p>
+</div>
+
+                                <div>
+                                </div>
+                                <div class="io-description">
+                                    <b>Returns : </b>        <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/boolean" target="_blank" >boolean</a></code>
+
+                                </div>
+                        </td>
+                    </tr>
 
             </tbody>
         </table>
@@ -405,9 +436,24 @@
                 </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="73" class="link-to-prism">lib/src/components/explorer/src/section/filter/section-filter-dialog.component.ts:73</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="92" class="link-to-prism">lib/src/components/explorer/src/section/filter/section-filter-dialog.component.ts:92</a></div>
                                 </td>
                             </tr>
+                    <tr>
+                        <td class="col-md-4">
+                                <div class="io-description"><p>Checks if the descending sort option is active for the current column.
+This getter returns true if the current sort property matches
+the column&#39;s property and the sort order is set to &#39;DESC&#39;.</p>
+</div>
+
+                                <div>
+                                </div>
+                                <div class="io-description">
+                                    <b>Returns : </b>        <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/boolean" target="_blank" >boolean</a></code>
+
+                                </div>
+                        </td>
+                    </tr>
 
             </tbody>
         </table>
@@ -427,9 +473,24 @@
                 </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="78" class="link-to-prism">lib/src/components/explorer/src/section/filter/section-filter-dialog.component.ts:78</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="103" class="link-to-prism">lib/src/components/explorer/src/section/filter/section-filter-dialog.component.ts:103</a></div>
                                 </td>
                             </tr>
+                    <tr>
+                        <td class="col-md-4">
+                                <div class="io-description"><p>Determines if the apply button for the filter is enabled.
+The button is enabled if the form is valid. If the column type
+is &#39;date&#39;, it also checks that both date values are not null.</p>
+</div>
+
+                                <div>
+                                </div>
+                                <div class="io-description">
+                                    <b>Returns : </b>        <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/boolean" target="_blank" >boolean</a></code>
+
+                                </div>
+                        </td>
+                    </tr>
 
             </tbody>
         </table>
@@ -449,9 +510,21 @@
                 </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="89" class="link-to-prism">lib/src/components/explorer/src/section/filter/section-filter-dialog.component.ts:89</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="121" class="link-to-prism">lib/src/components/explorer/src/section/filter/section-filter-dialog.component.ts:121</a></div>
                                 </td>
                             </tr>
+                    <tr>
+                        <td class="col-md-4">
+                                <div class="io-description"><p>Retrieves the current value of the filter data for display.
+If the date range is specified, it returns a formatted string
+representing the selected dates. If no dates are selected,
+it returns undefined.</p>
+</div>
+
+                                <div>
+                                </div>
+                        </td>
+                    </tr>
 
             </tbody>
         </table>
@@ -477,7 +550,12 @@ import {SectionFilterDialogViewModel} from &quot;./section-filter-dialog.view-mo
 import {CurrentUser} from &quot;../../../../../global/service&quot;;
 import {SortOrder} from &quot;../../../../../global/vars&quot;;
 
-
+/**
+ * A dialog component for filtering sections.
+ * This component provides a user interface for applying filters to sections.
+ * It utilizes reactive forms to manage the state of the filter form,
+ * and incorporates localization support for internationalization.
+ */
 @Component({
   selector: &quot;section-filter-dialog&quot;,
   standalone: true,
@@ -509,19 +587,39 @@ export class SectionFilterDialogComponent {
 
   private readonly datePipe &#x3D; inject(DatePipe);
   private readonly currentUser &#x3D; inject(CurrentUser);
+
+  /** ViewModel for the section filter dialog. */
   readonly vm &#x3D; inject(SectionFilterDialogViewModel);
 
-  get isSortAscActive() {
+  /**
+   * Checks if the ascending sort option is active for the current column.
+   * This getter returns true if the current sort property matches
+   * the column&#x27;s property and the sort order is set to &#x27;ASC&#x27;.
+   * @returns {boolean} True if ascending sort is active, otherwise false.
+   */
+  get isSortAscActive(): boolean {
     return this.vm.queryParamsSnapshot.sort &#x3D;&#x3D;&#x3D; this.vm.column.property
       &amp;&amp; (this.vm.queryParamsSnapshot.order as SortOrder) &#x3D;&#x3D;&#x3D; &quot;ASC&quot;;
   }
 
-  get isSortDescActive() {
+  /**
+   * Checks if the descending sort option is active for the current column.
+   * This getter returns true if the current sort property matches
+   * the column&#x27;s property and the sort order is set to &#x27;DESC&#x27;.
+   * @returns {boolean} True if descending sort is active, otherwise false.
+   */
+  get isSortDescActive(): boolean {
     return this.vm.queryParamsSnapshot.sort &#x3D;&#x3D;&#x3D; this.vm.column.property
       &amp;&amp; (this.vm.queryParamsSnapshot.order as SortOrder) &#x3D;&#x3D;&#x3D; &quot;DESC&quot;;
   }
 
-  get applyButtonEnabled() {
+  /**
+   * Determines if the apply button for the filter is enabled.
+   * The button is enabled if the form is valid. If the column type
+   * is &#x27;date&#x27;, it also checks that both date values are not null.
+   * @returns {boolean} True if the apply button is enabled, otherwise false.
+   */
+  get applyButtonEnabled(): boolean {
     if (this.vm.column.type &#x3D;&#x3D;&#x3D; &quot;date&quot;) {
       for (const v of (this.vm.form.value.value as Date[])) {
         if (v &#x3D;&#x3D;&#x3D; null) {
@@ -532,6 +630,13 @@ export class SectionFilterDialogComponent {
     return this.vm.form.valid;
   }
 
+  /**
+   * Retrieves the current value of the filter data for display.
+   * If the date range is specified, it returns a formatted string
+   * representing the selected dates. If no dates are selected,
+   * it returns undefined.
+   * @returns A formatted string of dates or undefined.
+   */
   get currentDataValue() {
     const dates &#x3D; this.vm.form.controls.value.value as Date[];
     if (!dates?.length) {
