--- a/components/StringObjectRendererComponent.html
+++ b/components/StringObjectRendererComponent.html
@@ -124,6 +124,15 @@
 </p>
 
 
+    <p class="comment">
+        <h3>Description</h3>
+    </p>
+    <p class="comment">
+        <p>This component allows for string input, which can be configured as a
+textarea or regular input based on the provided parameters. It supports
+read-only and disabled states.</p>
+
+    </p>
 
     <p class="comment">
         <h3>Extends</h3>
@@ -322,14 +331,17 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="65"
-                                    class="link-to-prism">lib/src/components/explorer/src/renderer/default/object/string/string-object-renderer.component.ts:65</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="85"
+                                    class="link-to-prism">lib/src/components/explorer/src/renderer/default/object/string/string-object-renderer.component.ts:85</a></div>
                         </td>
                     </tr>
 
 
             <tr>
                 <td class="col-md-4">
+                        <div class="io-description"><p>Initializes the component by setting the initial value and configuring
+the input based on the parameters.</p>
+</div>
 
                         <div class="io-description">
                             <b>Returns : </b>        <code><a href="https://www.typescriptlang.org/docs/handbook/basic-types.html" target="_blank" >void</a></code>
@@ -365,7 +377,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="53" class="link-to-prism">lib/src/components/explorer/src/renderer/default/object/string/string-object-renderer.component.ts:53</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="60" class="link-to-prism">lib/src/components/explorer/src/renderer/default/object/string/string-object-renderer.component.ts:60</a></div>
                         </td>
                     </tr>
 
@@ -392,7 +404,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="54" class="link-to-prism">lib/src/components/explorer/src/renderer/default/object/string/string-object-renderer.component.ts:54</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="61" class="link-to-prism">lib/src/components/explorer/src/renderer/default/object/string/string-object-renderer.component.ts:61</a></div>
                         </td>
                     </tr>
 
@@ -418,10 +430,16 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="46" class="link-to-prism">lib/src/components/explorer/src/renderer/default/object/string/string-object-renderer.component.ts:46</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="52" class="link-to-prism">lib/src/components/explorer/src/renderer/default/object/string/string-object-renderer.component.ts:52</a></div>
                         </td>
                     </tr>
 
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-description"><p>Unique identifier for the component instance.</p>
+</div>
+                </td>
+            </tr>
 
         </tbody>
     </table>
@@ -454,10 +472,16 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="47" class="link-to-prism">lib/src/components/explorer/src/renderer/default/object/string/string-object-renderer.component.ts:47</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="54" class="link-to-prism">lib/src/components/explorer/src/renderer/default/object/string/string-object-renderer.component.ts:54</a></div>
                         </td>
                     </tr>
 
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-description"><p>Parameters for rendering the string object.</p>
+</div>
+                </td>
+            </tr>
 
         </tbody>
     </table>
@@ -486,11 +510,17 @@
                         </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in         <code><a href="../classes/AbstractExplorerObjectRenderer.html#source" target="_self" >AbstractExplorerObjectRenderer:23</a></code>
+                                <div class="io-line">Defined in         <code><a href="../classes/AbstractExplorerObjectRenderer.html#source" target="_self" >AbstractExplorerObjectRenderer:31</a></code>
 </div>
                         </td>
                     </tr>
 
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-description"><p>The column definition used for rendering the object.</p>
+</div>
+                </td>
+            </tr>
 
         </tbody>
     </table>
@@ -519,11 +549,17 @@
                         </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in         <code><a href="../classes/AbstractExplorerObjectRenderer.html#source" target="_self" >AbstractExplorerObjectRenderer:25</a></code>
+                                <div class="io-line">Defined in         <code><a href="../classes/AbstractExplorerObjectRenderer.html#source" target="_self" >AbstractExplorerObjectRenderer:35</a></code>
 </div>
                         </td>
                     </tr>
 
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-description"><p>The data for the object to be rendered.</p>
+</div>
+                </td>
+            </tr>
 
         </tbody>
     </table>
@@ -552,11 +588,17 @@
                         </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in         <code><a href="../classes/AbstractExplorerObjectRenderer.html#source" target="_self" >AbstractExplorerObjectRenderer:27</a></code>
+                                <div class="io-line">Defined in         <code><a href="../classes/AbstractExplorerObjectRenderer.html#source" target="_self" >AbstractExplorerObjectRenderer:39</a></code>
 </div>
                         </td>
                     </tr>
 
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-description"><p>The form group associated with the entity.</p>
+</div>
+                </td>
+            </tr>
 
         </tbody>
     </table>
@@ -585,11 +627,17 @@
                         </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in         <code><a href="../classes/AbstractExplorerObjectRenderer.html#source" target="_self" >AbstractExplorerObjectRenderer:24</a></code>
+                                <div class="io-line">Defined in         <code><a href="../classes/AbstractExplorerObjectRenderer.html#source" target="_self" >AbstractExplorerObjectRenderer:33</a></code>
 </div>
                         </td>
                     </tr>
 
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-description"><p>Parameters for customizing the renderer&#39;s behavior.</p>
+</div>
+                </td>
+            </tr>
 
         </tbody>
     </table>
@@ -618,11 +666,17 @@
                         </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in         <code><a href="../classes/AbstractExplorerObjectRenderer.html#source" target="_self" >AbstractExplorerObjectRenderer:26</a></code>
+                                <div class="io-line">Defined in         <code><a href="../classes/AbstractExplorerObjectRenderer.html#source" target="_self" >AbstractExplorerObjectRenderer:37</a></code>
 </div>
                         </td>
                     </tr>
 
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-description"><p>The entity data associated with this object.</p>
+</div>
+                </td>
+            </tr>
 
         </tbody>
     </table>
@@ -648,9 +702,19 @@
                 </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="56" class="link-to-prism">lib/src/components/explorer/src/renderer/default/object/string/string-object-renderer.component.ts:56</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="68" class="link-to-prism">lib/src/components/explorer/src/renderer/default/object/string/string-object-renderer.component.ts:68</a></div>
                                 </td>
                             </tr>
+                    <tr>
+                        <td class="col-md-4">
+                                <div class="io-description"><p>Determines if the input field is read-only based on query parameters
+and renderer parameters.</p>
+</div>
+
+                                <div>
+                                </div>
+                        </td>
+                    </tr>
 
             </tbody>
         </table>
@@ -670,9 +734,18 @@
                 </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="61" class="link-to-prism">lib/src/components/explorer/src/renderer/default/object/string/string-object-renderer.component.ts:61</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="77" class="link-to-prism">lib/src/components/explorer/src/renderer/default/object/string/string-object-renderer.component.ts:77</a></div>
                                 </td>
                             </tr>
+                    <tr>
+                        <td class="col-md-4">
+                                <div class="io-description"><p>Checks if the input should be rendered as a textarea.</p>
+</div>
+
+                                <div>
+                                </div>
+                        </td>
+                    </tr>
 
             </tbody>
         </table>
@@ -693,6 +766,11 @@ import {AbstractExplorerObjectRenderer} from &quot;../../abstract-explorer-objec
 import {NumberUtils} from &quot;../../../../../../../global/util&quot;;
 import DuplicateItemToken &#x3D; Explorer.DuplicateItemToken;
 
+/**
+ * This component allows for string input, which can be configured as a
+ * textarea or regular input based on the provided parameters. It supports
+ * read-only and disabled states.
+ */
 @Component({
   selector: &quot;string-object-renderer&quot;,
   standalone: true,
@@ -710,7 +788,9 @@ import DuplicateItemToken &#x3D; Explorer.DuplicateItemToken;
 export class StringObjectRendererComponent extends AbstractExplorerObjectRenderer&lt;{ [k: string]: unknown }&gt;
   implements OnInit {
 
+  /** Unique identifier for the component instance. */
   readonly id &#x3D; NumberUtils.getRandomInt();
+  /** Parameters for rendering the string object. */
   rendererParams: StringObjectRendererParams &#x3D; {
     readonly: false,
     disabled: false,
@@ -720,28 +800,46 @@ export class StringObjectRendererComponent extends AbstractExplorerObjectRendere
   private readonly ar &#x3D; inject(ActivatedRoute);
   private readonly cdr &#x3D; inject(ChangeDetectorRef);
 
+  /**
+   * Determines if the input field is read-only based on query parameters
+   * and renderer parameters.
+   * @returns True if the input is read-only.
+   */
   get isReadonly() {
     return !this.ar.snapshot.queryParams[DuplicateItemToken] &amp;&amp; this.rendererParams.readonly
       &amp;&amp; this.data &amp;&amp; this.data[this.column.property]?.toString()?.length;
   }
 
+  /**
+   * Checks if the input should be rendered as a textarea.
+   * @returns True if the input should be a textarea, false otherwise.
+   */
   get isTextArea() {
     return this.rendererParams.textarea || this.ctrl.value?.length &gt; 50;
   }
 
+  /**
+   * Initializes the component by setting the initial value and configuring
+   * the input based on the parameters.
+   */
   ngOnInit(): void {
+    // Set the control value to JSON string if it&#x27;s an object
     if (this.ctrl.value &amp;&amp; typeof this.ctrl.value &#x3D;&#x3D;&#x3D; &quot;object&quot;) {
       this.ctrl.setValue(JSON.stringify(this.ctrl.value), {emitEvent: false});
     }
+    // Disable the control if it is a primary column of type &quot;unknown&quot;
     if (this.column.primary &amp;&amp; this.column.type &#x3D;&#x3D;&#x3D; &quot;unknown&quot;) {
       this.ctrl.disable();
     }
+    // Assign parameters to rendererParams if provided
     if (this.params) {
       Object.assign(this.rendererParams, this.params);
     }
+    // Disable control if the disabled parameter is true
     if (this.rendererParams.disabled) {
       this.ctrl.disable();
     }
+    // Mark for check to trigger change detection
     this.cdr.markForCheck();
   }
 
