--- a/components/ConfigPropertyEditorComponent.html
+++ b/components/ConfigPropertyEditorComponent.html
@@ -124,6 +124,14 @@
 </p>
 
 
+    <p class="comment">
+        <h3>Description</h3>
+    </p>
+    <p class="comment">
+        <p>Component for editing a configuration property. It provides a form for entering the key and value
+of the property, with validation to ensure proper input.</p>
+
+    </p>
 
 
     <p class="comment">
@@ -308,14 +316,16 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="66"
-                                    class="link-to-prism">lib/src/components/config/src/editor/config-property-editor.component.ts:66</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="81"
+                                    class="link-to-prism">lib/src/components/config/src/editor/config-property-editor.component.ts:81</a></div>
                         </td>
                     </tr>
 
 
             <tr>
                 <td class="col-md-4">
+                        <div class="io-description"><p>Closes the dialog with a delete command</p>
+</div>
 
                         <div class="io-description">
                             <b>Returns : </b>        <code><a href="https://www.typescriptlang.org/docs/handbook/basic-types.html" target="_blank" >void</a></code>
@@ -345,14 +355,16 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="62"
-                                    class="link-to-prism">lib/src/components/config/src/editor/config-property-editor.component.ts:62</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="74"
+                                    class="link-to-prism">lib/src/components/config/src/editor/config-property-editor.component.ts:74</a></div>
                         </td>
                     </tr>
 
 
             <tr>
                 <td class="col-md-4">
+                        <div class="io-description"><p>Initializes the component and patches the form with the data</p>
+</div>
 
                         <div class="io-description">
                             <b>Returns : </b>        <code><a href="https://www.typescriptlang.org/docs/handbook/basic-types.html" target="_blank" >void</a></code>
@@ -382,14 +394,16 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="70"
-                                    class="link-to-prism">lib/src/components/config/src/editor/config-property-editor.component.ts:70</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="88"
+                                    class="link-to-prism">lib/src/components/config/src/editor/config-property-editor.component.ts:88</a></div>
                         </td>
                     </tr>
 
 
             <tr>
                 <td class="col-md-4">
+                        <div class="io-description"><p>Closes the dialog with a save command</p>
+</div>
 
                         <div class="io-description">
                             <b>Returns : </b>        <code><a href="https://www.typescriptlang.org/docs/handbook/basic-types.html" target="_blank" >void</a></code>
@@ -425,7 +439,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="47" class="link-to-prism">lib/src/components/config/src/editor/config-property-editor.component.ts:47</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="53" class="link-to-prism">lib/src/components/config/src/editor/config-property-editor.component.ts:53</a></div>
                         </td>
                     </tr>
 
@@ -451,10 +465,16 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="46" class="link-to-prism">lib/src/components/config/src/editor/config-property-editor.component.ts:46</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="51" class="link-to-prism">lib/src/components/config/src/editor/config-property-editor.component.ts:51</a></div>
                         </td>
                     </tr>
 
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-description"><p>Form for editing a configuration property</p>
+</div>
+                </td>
+            </tr>
 
         </tbody>
     </table>
@@ -478,7 +498,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="48" class="link-to-prism">lib/src/components/config/src/editor/config-property-editor.component.ts:48</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="54" class="link-to-prism">lib/src/components/config/src/editor/config-property-editor.component.ts:54</a></div>
                         </td>
                     </tr>
 
@@ -507,9 +527,16 @@
                 </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="50" class="link-to-prism">lib/src/components/config/src/editor/config-property-editor.component.ts:50</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="57" class="link-to-prism">lib/src/components/config/src/editor/config-property-editor.component.ts:57</a></div>
                                 </td>
                             </tr>
+                    <tr>
+                        <td class="col-md-4">
+                                <div class="io-description"><p>Data passed to the editor component</p>
+</div>
+
+                        </td>
+                    </tr>
 
             </tbody>
         </table>
@@ -529,9 +556,16 @@
                 </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="54" class="link-to-prism">lib/src/components/config/src/editor/config-property-editor.component.ts:54</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="62" class="link-to-prism">lib/src/components/config/src/editor/config-property-editor.component.ts:62</a></div>
                                 </td>
                             </tr>
+                    <tr>
+                        <td class="col-md-4">
+                                <div class="io-description"><p>Checks if the save button should be enabled</p>
+</div>
+
+                        </td>
+                    </tr>
 
             </tbody>
         </table>
@@ -551,9 +585,16 @@
                 </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="58" class="link-to-prism">lib/src/components/config/src/editor/config-property-editor.component.ts:58</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="67" class="link-to-prism">lib/src/components/config/src/editor/config-property-editor.component.ts:67</a></div>
                                 </td>
                             </tr>
+                    <tr>
+                        <td class="col-md-4">
+                                <div class="io-description"><p>Checks if the delete button should be enabled</p>
+</div>
+
+                        </td>
+                    </tr>
 
             </tbody>
         </table>
@@ -574,6 +615,10 @@ import {ButtonModule} from &quot;primeng/button&quot;;
 import {RippleModule} from &quot;primeng/ripple&quot;;
 import createForm &#x3D; ConfigPropertyEditor.createForm;
 
+/**
+ * Component for editing a configuration property. It provides a form for entering the key and value
+ * of the property, with validation to ensure proper input.
+ */
 @Component({
   selector: &quot;config-property-editor&quot;,
   standalone: true,
@@ -591,30 +636,44 @@ import createForm &#x3D; ConfigPropertyEditor.createForm;
 })
 export class ConfigPropertyEditorComponent implements OnInit {
 
+  /** Form for editing a configuration property */
   readonly form &#x3D; createForm();
+
   private readonly config &#x3D; inject(DynamicDialogConfig);
   private readonly ref &#x3D; inject(DynamicDialogRef);
 
+  /** Data passed to the editor component */
   get data() {
     return this.config.data as ConfigItem;
   }
 
+  /** Checks if the save button should be enabled */
   get isSaveBtnEnabled() {
     return this.form.valid &amp;&amp; this.form.dirty;
   }
 
+  /** Checks if the delete button should be enabled */
   get isDeleteBtnEnabled() {
     return this.form.valid &amp;&amp; !this.form.touched &amp;&amp; !this.form.dirty;
   }
 
+  /**
+   * Initializes the component and patches the form with the data
+   **/
   ngOnInit(): void {
     this.form.patchValue(this.data);
   }
 
+  /**
+   * Closes the dialog with a delete command
+   **/
   deleteProperty() {
     this.ref.close({cmd: &quot;delete&quot;, data: this.form.value});
   }
 
+  /**
+   * Closes the dialog with a save command
+   **/
   saveProperty() {
     this.ref.close({cmd: &quot;save&quot;, data: this.form.value});
   }
