--- a/components/DeleteFileActionRendererComponent.html
+++ b/components/DeleteFileActionRendererComponent.html
@@ -120,6 +120,13 @@
 </p>
 
 
+    <p class="comment">
+        <h3>Description</h3>
+    </p>
+    <p class="comment">
+        <p>This component provides functionality to confirm and delete a file.</p>
+
+    </p>
 
     <p class="comment">
         <h3>Extends</h3>
@@ -315,14 +322,17 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="62"
-                                    class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/file/delete/delete-file-action-renderer.component.ts:62</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="74"
+                                    class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/file/delete/delete-file-action-renderer.component.ts:74</a></div>
                         </td>
                     </tr>
 
 
             <tr>
                 <td class="col-md-4">
+                        <div class="io-description"><p>This method displays a confirmation dialog, and upon acceptance,
+it deletes the file and navigates back to the files section.</p>
+</div>
 
                         <div class="io-description">
                             <b>Returns : </b>        <code><a href="https://www.typescriptlang.org/docs/handbook/basic-types.html" target="_blank" >void</a></code>
@@ -358,7 +368,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="53" class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/file/delete/delete-file-action-renderer.component.ts:53</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="57" class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/file/delete/delete-file-action-renderer.component.ts:57</a></div>
                         </td>
                     </tr>
 
@@ -390,10 +400,16 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="52" class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/file/delete/delete-file-action-renderer.component.ts:52</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="56" class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/file/delete/delete-file-action-renderer.component.ts:56</a></div>
                         </td>
                     </tr>
 
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-description"><p>Key for the confirmation dialog.</p>
+</div>
+                </td>
+            </tr>
 
         </tbody>
     </table>
@@ -417,7 +433,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="56" class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/file/delete/delete-file-action-renderer.component.ts:56</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="60" class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/file/delete/delete-file-action-renderer.component.ts:60</a></div>
                         </td>
                     </tr>
 
@@ -444,7 +460,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="54" class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/file/delete/delete-file-action-renderer.component.ts:54</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="58" class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/file/delete/delete-file-action-renderer.component.ts:58</a></div>
                         </td>
                     </tr>
 
@@ -471,7 +487,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="55" class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/file/delete/delete-file-action-renderer.component.ts:55</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="59" class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/file/delete/delete-file-action-renderer.component.ts:59</a></div>
                         </td>
                     </tr>
 
@@ -503,11 +519,17 @@
                         </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in         <code><a href="../classes/AbstractExplorerActionRenderer.html#source" target="_self" >AbstractExplorerActionRenderer:25</a></code>
+                                <div class="io-line">Defined in         <code><a href="../classes/AbstractExplorerActionRenderer.html#source" target="_self" >AbstractExplorerActionRenderer:34</a></code>
 </div>
                         </td>
                     </tr>
 
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-description"><p>The action-data to be rendered.</p>
+</div>
+                </td>
+            </tr>
 
         </tbody>
     </table>
@@ -536,11 +558,17 @@
                         </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in         <code><a href="../classes/AbstractExplorerActionRenderer.html#source" target="_self" >AbstractExplorerActionRenderer:23</a></code>
+                                <div class="io-line">Defined in         <code><a href="../classes/AbstractExplorerActionRenderer.html#source" target="_self" >AbstractExplorerActionRenderer:30</a></code>
 </div>
                         </td>
                     </tr>
 
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-description"><p>The data for the actions to be rendered.</p>
+</div>
+                </td>
+            </tr>
 
         </tbody>
     </table>
@@ -569,11 +597,17 @@
                         </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in         <code><a href="../classes/AbstractExplorerActionRenderer.html#source" target="_self" >AbstractExplorerActionRenderer:24</a></code>
+                                <div class="io-line">Defined in         <code><a href="../classes/AbstractExplorerActionRenderer.html#source" target="_self" >AbstractExplorerActionRenderer:32</a></code>
 </div>
                         </td>
                     </tr>
 
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-description"><p>The form group managing the entity data associated with the actions.</p>
+</div>
+                </td>
+            </tr>
 
         </tbody>
     </table>
@@ -602,11 +636,17 @@
                         </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in         <code><a href="../classes/AbstractExplorerActionRenderer.html#source" target="_self" >AbstractExplorerActionRenderer:22</a></code>
+                                <div class="io-line">Defined in         <code><a href="../classes/AbstractExplorerActionRenderer.html#source" target="_self" >AbstractExplorerActionRenderer:28</a></code>
 </div>
                         </td>
                     </tr>
 
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-description"><p>The target data associated with the actions.</p>
+</div>
+                </td>
+            </tr>
 
         </tbody>
     </table>
@@ -632,9 +672,18 @@
                 </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="58" class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/file/delete/delete-file-action-renderer.component.ts:58</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="66" class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/file/delete/delete-file-action-renderer.component.ts:66</a></div>
                                 </td>
                             </tr>
+                    <tr>
+                        <td class="col-md-4">
+                                <div class="io-description"><p>Gets the preloader channel identifier.</p>
+</div>
+
+                                <div>
+                                </div>
+                        </td>
+                    </tr>
 
             </tbody>
         </table>
@@ -662,6 +711,9 @@ import {Explorer} from &quot;../../../../../../../explorer&quot;;
 import {ToastData, ToastEvent} from &quot;../../../../../../../../global/vars&quot;;
 import {usePreloader} from &quot;../../../../../../../../modules/preloader/src/use-preloader&quot;;
 
+/**
+ * This component provides functionality to confirm and delete a file.
+ */
 @Component({
   selector: &quot;delete-file-action-renderer&quot;,
   standalone: true,
@@ -678,16 +730,25 @@ import {usePreloader} from &quot;../../../../../../../../modules/preloader/src/u
 })
 export class DeleteFileActionRendererComponent extends AbstractExplorerActionRenderer {
 
+  /** Key for the confirmation dialog. */
   readonly dialogKey &#x3D; &quot;del-file-action-dialog&quot;;
   private readonly confirmationService &#x3D; inject(ConfirmationService);
   private readonly service &#x3D; inject(DeleteFileActionRendererService);
   private readonly store &#x3D; inject(Store);
   private readonly router &#x3D; inject(Router);
 
+  /**
+   * Gets the preloader channel identifier.
+   * @returns {string} The preloader channel identifier.
+   */
   private get preloaderChannel() {
     return Explorer.ObjectPreloaderCn;
   }
 
+  /**
+   * This method displays a confirmation dialog, and upon acceptance,
+   * it deletes the file and navigates back to the files section.
+   */
   deleteFile() {
     this.confirmationService.confirm({
       key: this.dialogKey,
