--- a/components/ExplorerObjectComponent.html
+++ b/components/ExplorerObjectComponent.html
@@ -124,6 +124,16 @@
 </p>
 
 
+    <p class="comment">
+        <h3>Description</h3>
+    </p>
+    <p class="comment">
+        <p>A component that represents an explorer object in the application.
+This component provides functionality for viewing, editing,
+duplicating, and deleting objects within an explorer interface.
+It utilizes a ViewModel to manage state and communicate with services.</p>
+
+    </p>
 
 
     <p class="comment">
@@ -335,14 +345,18 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="121"
-                                    class="link-to-prism">lib/src/components/explorer/src/object/explorer-object.component.ts:121</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="174"
+                                    class="link-to-prism">lib/src/components/explorer/src/object/explorer-object.component.ts:174</a></div>
                         </td>
                     </tr>
 
 
             <tr>
                 <td class="col-md-4">
+                        <div class="io-description"><p>Duplicates the current object and opens it in a new tab.
+This method constructs a URL for the new object based on the
+current object&#39;s properties and opens it in a new browser tab.</p>
+</div>
 
                         <div class="io-description">
                             <b>Returns : </b>        <code><a href="https://www.typescriptlang.org/docs/handbook/basic-types.html" target="_blank" >void</a></code>
@@ -372,14 +386,18 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="116"
-                                    class="link-to-prism">lib/src/components/explorer/src/object/explorer-object.component.ts:116</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="164"
+                                    class="link-to-prism">lib/src/components/explorer/src/object/explorer-object.component.ts:164</a></div>
                         </td>
                     </tr>
 
 
             <tr>
                 <td class="col-md-4">
+                        <div class="io-description"><p>Initiates the export process for the object.
+This method dynamically imports the XdbExportDialogComponent
+and opens it with the necessary configuration from the ViewModel.</p>
+</div>
 
                         <div class="io-description">
                             <b>Returns : </b>        <code><a href="https://www.typescriptlang.org/docs/handbook/basic-types.html" target="_blank" >void</a></code>
@@ -409,14 +427,18 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="112"
-                                    class="link-to-prism">lib/src/components/explorer/src/object/explorer-object.component.ts:112</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="155"
+                                    class="link-to-prism">lib/src/components/explorer/src/object/explorer-object.component.ts:155</a></div>
                         </td>
                     </tr>
 
 
             <tr>
                 <td class="col-md-4">
+                        <div class="io-description"><p>Checks if the specified tab has columns associated with it.
+This method checks if there are any columns in the target data entity
+that belong to the provided tab.</p>
+</div>
 
                             <div class="io-description">
                                 <b>Parameters :</b>
@@ -427,6 +449,7 @@
                                             <td>Name</td>
                                                 <td>Type</td>
                                             <td>Optional</td>
+                                                <td>Description</td>
                                         </tr>
                                     </thead>
                                     <tbody>
@@ -441,6 +464,12 @@
                                             </td>
 
 
+                                            <td>
+                                                    <ul>
+<li>The tab to check for associated columns.</li>
+</ul>
+
+                                            </td>
                                         </tr>
                                     </tbody>
                                 </table>
@@ -450,7 +479,8 @@
 
                         </div>
                             <div class="io-description">
-                                
+                                <p>Column if the tab has columns.</p>
+
                             </div>
                 </td>
             </tr>
@@ -476,14 +506,18 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="108"
-                                    class="link-to-prism">lib/src/components/explorer/src/object/explorer-object.component.ts:108</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="144"
+                                    class="link-to-prism">lib/src/components/explorer/src/object/explorer-object.component.ts:144</a></div>
                         </td>
                     </tr>
 
 
             <tr>
                 <td class="col-md-4">
+                        <div class="io-description"><p>Navigates back to the previous page in the history stack.
+This method is typically used to allow users to return to the
+previous view without having to implement custom navigation logic.</p>
+</div>
 
                         <div class="io-description">
                             <b>Returns : </b>        <code><a href="https://www.typescriptlang.org/docs/handbook/basic-types.html" target="_blank" >void</a></code>
@@ -513,14 +547,18 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="104"
-                                    class="link-to-prism">lib/src/components/explorer/src/object/explorer-object.component.ts:104</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="135"
+                                    class="link-to-prism">lib/src/components/explorer/src/object/explorer-object.component.ts:135</a></div>
                         </td>
                     </tr>
 
 
             <tr>
                 <td class="col-md-4">
+                        <div class="io-description"><p>Initializes the component when it is created.
+This lifecycle method is called once the component has been initialized.
+It triggers the ViewModel to initialize the object being explored.</p>
+</div>
 
                         <div class="io-description">
                             <b>Returns : </b>        <code><a href="https://www.typescriptlang.org/docs/handbook/basic-types.html" target="_blank" >void</a></code>
@@ -560,10 +598,16 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="76" class="link-to-prism">lib/src/components/explorer/src/object/explorer-object.component.ts:76</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="83" class="link-to-prism">lib/src/components/explorer/src/object/explorer-object.component.ts:83</a></div>
                         </td>
                     </tr>
 
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-description"><p>The index of the currently active tab.</p>
+</div>
+                </td>
+            </tr>
 
         </tbody>
     </table>
@@ -587,7 +631,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="79" class="link-to-prism">lib/src/components/explorer/src/object/explorer-object.component.ts:79</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="87" class="link-to-prism">lib/src/components/explorer/src/object/explorer-object.component.ts:87</a></div>
                         </td>
                     </tr>
 
@@ -613,7 +657,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="78" class="link-to-prism">lib/src/components/explorer/src/object/explorer-object.component.ts:78</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="86" class="link-to-prism">lib/src/components/explorer/src/object/explorer-object.component.ts:86</a></div>
                         </td>
                     </tr>
 
@@ -639,10 +683,16 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="77" class="link-to-prism">lib/src/components/explorer/src/object/explorer-object.component.ts:77</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="85" class="link-to-prism">lib/src/components/explorer/src/object/explorer-object.component.ts:85</a></div>
                         </td>
                     </tr>
 
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-description"><p>The ViewModel instance for managing state and logic.</p>
+</div>
+                </td>
+            </tr>
 
         </tbody>
     </table>
@@ -668,9 +718,20 @@
                 </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="81" class="link-to-prism">lib/src/components/explorer/src/object/explorer-object.component.ts:81</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="95" class="link-to-prism">lib/src/components/explorer/src/object/explorer-object.component.ts:95</a></div>
                                 </td>
                             </tr>
+                    <tr>
+                        <td class="col-md-4">
+                                <div class="io-description"><p>Returns the CSS class name for the current tab based on its size.
+This getter computes the class name for responsive design based on
+the current device type (desktop or tablet) and the size of the active tab.</p>
+</div>
+
+                                <div>
+                                </div>
+                        </td>
+                    </tr>
 
             </tbody>
         </table>
@@ -690,9 +751,24 @@
                 </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="93" class="link-to-prism">lib/src/components/explorer/src/object/explorer-object.component.ts:93</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="113" class="link-to-prism">lib/src/components/explorer/src/object/explorer-object.component.ts:113</a></div>
                                 </td>
                             </tr>
+                    <tr>
+                        <td class="col-md-4">
+                                <div class="io-description"><p>Checks if the current user has the ability to export the object.
+The user can export the object if they have permission to delete
+the object and have an ADMIN role.</p>
+</div>
+
+                                <div>
+                                </div>
+                                <div class="io-description">
+                                    <b>Returns : </b>        <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/boolean" target="_blank" >boolean</a></code>
+
+                                </div>
+                        </td>
+                    </tr>
 
             </tbody>
         </table>
@@ -712,9 +788,24 @@
                 </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="100" class="link-to-prism">lib/src/components/explorer/src/object/explorer-object.component.ts:100</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="126" class="link-to-prism">lib/src/components/explorer/src/object/explorer-object.component.ts:126</a></div>
                                 </td>
                             </tr>
+                    <tr>
+                        <td class="col-md-4">
+                                <div class="io-description"><p>Checks if the object can be duplicated.
+The object can be duplicated if there is no existing duplicate ID
+and if the default action for duplication is enabled.</p>
+</div>
+
+                                <div>
+                                </div>
+                                <div class="io-description">
+                                    <b>Returns : </b>        <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/boolean" target="_blank" >boolean</a></code>
+
+                                </div>
+                        </td>
+                    </tr>
 
             </tbody>
         </table>
@@ -749,6 +840,12 @@ import {DEVICE} from &quot;../../../../modules/device&quot;;
 import {CurrentUser} from &quot;../../../../global/service&quot;;
 import {Roles} from &quot;../../../../global/vars&quot;;
 
+/**
+ * A component that represents an explorer object in the application.
+ * This component provides functionality for viewing, editing,
+ * duplicating, and deleting objects within an explorer interface.
+ * It utilizes a ViewModel to manage state and communicate with services.
+ */
 @Component({
   selector: &quot;explorer-object&quot;,
   standalone: true,
@@ -782,11 +879,19 @@ import {Roles} from &quot;../../../../global/vars&quot;;
 })
 export class ExplorerObjectComponent implements OnInit {
 
+  /** The index of the currently active tab. */
   activeTabIndex &#x3D; 0;
+  /** The ViewModel instance for managing state and logic. */
   readonly vm &#x3D; inject(ExplorerObjectViewModel);
   readonly device &#x3D; inject(DEVICE);
   private readonly currentUser &#x3D; inject(CurrentUser);
 
+  /**
+   * Returns the CSS class name for the current tab based on its size.
+   * This getter computes the class name for responsive design based on
+   * the current device type (desktop or tablet) and the size of the active tab.
+   * @returns The CSS class name for the active tab, or null if not applicable.
+   */
   get tabClassName() {
     const tabSize &#x3D; this.vm.tabs[this.activeTabIndex]?.size;
     if (!tabSize) {
@@ -799,34 +904,73 @@ export class ExplorerObjectComponent implements OnInit {
     return &#x60;col-${tabSize[key]}&#x60;;
   }
 
-  get canExport() {
+  /**
+   * Checks if the current user has the ability to export the object.
+   * The user can export the object if they have permission to delete
+   * the object and have an ADMIN role.
+   * @returns {boolean} True if the user can export, otherwise false.
+   */
+  get canExport(): boolean {
     if (!this.vm.canDeleteObject) {
       return false;
     }
     return this.currentUser.hasSomeRole(Roles.ADMIN);
   }
 
-  get canDuplicate() {
+  /**
+   * Checks if the object can be duplicated.
+   * The object can be duplicated if there is no existing duplicate ID
+   * and if the default action for duplication is enabled.
+   * @returns {boolean} True if the object can be duplicated, otherwise false.
+   */
+  get canDuplicate(): boolean {
     return !this.vm.duplicateId &amp;&amp; this.vm.targetData.entity.defaultActionDuplicate;
   }
 
+  /**
+   * Initializes the component when it is created.
+   * This lifecycle method is called once the component has been initialized.
+   * It triggers the ViewModel to initialize the object being explored.
+   */
   ngOnInit(): void {
     this.vm.initObject();
   }
 
+  /**
+   * Navigates back to the previous page in the history stack.
+   * This method is typically used to allow users to return to the
+   * previous view without having to implement custom navigation logic.
+   */
   navBack() {
     history.back();
   }
 
+  /**
+   * Checks if the specified tab has columns associated with it.
+   * This method checks if there are any columns in the target data entity
+   * that belong to the provided tab.
+   * @param {ExplorerTab} tab - The tab to check for associated columns.
+   * @returns Column if the tab has columns.
+   */
   hasColumns(tab: ExplorerTab) {
     return this.vm.targetData.entity.columns.find(v &#x3D;&gt; v.tab.id &#x3D;&#x3D;&#x3D; tab.id);
   }
 
+  /**
+   * Initiates the export process for the object.
+   * This method dynamically imports the XdbExportDialogComponent
+   * and opens it with the necessary configuration from the ViewModel.
+   */
   exportObject() {
     import(&quot;../../../xdb&quot;).then(c &#x3D;&gt;
       this.vm.dialogService.open(c.XdbExportDialogComponent, this.vm.exportDialogConfig));
   }
 
+  /**
+   * Duplicates the current object and opens it in a new tab.
+   * This method constructs a URL for the new object based on the
+   * current object&#x27;s properties and opens it in a new browser tab.
+   */
   duplicateObject() {
     const p1 &#x3D; this.vm.entityTargetOrAlias;
     const prop &#x3D; this.vm.targetData.primaryColumn.property;
