--- a/components/ExplorerSectionComponent.html
+++ b/components/ExplorerSectionComponent.html
@@ -124,6 +124,15 @@
 </p>
 
 
+    <p class="comment">
+        <h3>Description</h3>
+    </p>
+    <p class="comment">
+        <p>This component is responsible for rendering the explorer section UI,
+managing the state of selected rows, and providing methods for
+navigation and filtering of the displayed data.</p>
+
+    </p>
 
 
 
@@ -305,16 +314,22 @@
             </tr>
                 <tr>
                     <td class="col-md-4">
-                        <i>Type : </i>        <code><a href="https://www.typescriptlang.org/docs/handbook/basic-types.html" target="_blank" >any</a></code>
+                        <i>Type : </i>        <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/boolean" target="_blank" >boolean</a></code>
 
                     </td>
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="61" class="link-to-prism">lib/src/components/explorer/src/section/explorer-section.component.ts:61</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="73" class="link-to-prism">lib/src/components/explorer/src/section/explorer-section.component.ts:73</a></div>
                         </td>
                     </tr>
 
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-description"><p>Class binding for dialog mode.</p>
+</div>
+                </td>
+            </tr>
 
         </tbody>
     </table>
@@ -346,14 +361,16 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="77"
-                                    class="link-to-prism">lib/src/components/explorer/src/section/explorer-section.component.ts:77</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="106"
+                                    class="link-to-prism">lib/src/components/explorer/src/section/explorer-section.component.ts:106</a></div>
                         </td>
                     </tr>
 
 
             <tr>
                 <td class="col-md-4">
+                        <div class="io-description"><p>Checks if an item is selected.</p>
+</div>
 
                             <div class="io-description">
                                 <b>Parameters :</b>
@@ -364,6 +381,7 @@
                                             <td>Name</td>
                                                 <td>Type</td>
                                             <td>Optional</td>
+                                                <td>Description</td>
                                         </tr>
                                     </thead>
                                     <tbody>
@@ -378,6 +396,10 @@
                                             </td>
 
 
+                                            <td>
+                                                    <p>The item to check for selection.</p>
+
+                                            </td>
                                         </tr>
                                     </tbody>
                                 </table>
@@ -387,7 +409,8 @@
 
                         </div>
                             <div class="io-description">
-                                
+                                <p>True if the item is selected, otherwise false.</p>
+
                             </div>
                 </td>
             </tr>
@@ -413,14 +436,16 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="85"
-                                    class="link-to-prism">lib/src/components/explorer/src/section/explorer-section.component.ts:85</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="119"
+                                    class="link-to-prism">lib/src/components/explorer/src/section/explorer-section.component.ts:119</a></div>
                         </td>
                     </tr>
 
 
             <tr>
                 <td class="col-md-4">
+                        <div class="io-description"><p>Gets the filter value for a specified property.</p>
+</div>
 
                             <div class="io-description">
                                 <b>Parameters :</b>
@@ -431,6 +456,7 @@
                                             <td>Name</td>
                                                 <td>Type</td>
                                             <td>Optional</td>
+                                                <td>Description</td>
                                         </tr>
                                     </thead>
                                     <tbody>
@@ -445,16 +471,21 @@
                                             </td>
 
 
+                                            <td>
+                                                    <p>The name of the property to filter by.</p>
+
+                                            </td>
                                         </tr>
                                     </tbody>
                                 </table>
                             </div>
                         <div class="io-description">
-                            <b>Returns : </b>        <code><a href="https://www.typescriptlang.org/docs/handbook/basic-types.html" target="_blank" >any</a></code>
+                            <b>Returns : </b>        <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/string" target="_blank" >string</a></code>
 
                         </div>
                             <div class="io-description">
-                                
+                                <p>The filter value or undefined if not set.</p>
+
                             </div>
                 </td>
             </tr>
@@ -485,10 +516,16 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="58" class="link-to-prism">lib/src/components/explorer/src/section/explorer-section.component.ts:58</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="66" class="link-to-prism">lib/src/components/explorer/src/section/explorer-section.component.ts:66</a></div>
                         </td>
                     </tr>
 
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-description"><p>ViewModel for the explorer section component.</p>
+</div>
+                </td>
+            </tr>
 
         </tbody>
     </table>
@@ -514,9 +551,22 @@
                 </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="61" class="link-to-prism">lib/src/components/explorer/src/section/explorer-section.component.ts:61</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="73" class="link-to-prism">lib/src/components/explorer/src/section/explorer-section.component.ts:73</a></div>
                                 </td>
                             </tr>
+                    <tr>
+                        <td class="col-md-4">
+                                <div class="io-description"><p>Class binding for dialog mode.</p>
+</div>
+
+                                <div>
+                                </div>
+                                <div class="io-description">
+                                    <b>Returns : </b>        <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/boolean" target="_blank" >boolean</a></code>
+
+                                </div>
+                        </td>
+                    </tr>
 
             </tbody>
         </table>
@@ -536,9 +586,22 @@
                 </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="65" class="link-to-prism">lib/src/components/explorer/src/section/explorer-section.component.ts:65</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="81" class="link-to-prism">lib/src/components/explorer/src/section/explorer-section.component.ts:81</a></div>
                                 </td>
                             </tr>
+                    <tr>
+                        <td class="col-md-4">
+                                <div class="io-description"><p>Gets the count of selected rows.</p>
+</div>
+
+                                <div>
+                                </div>
+                                <div class="io-description">
+                                    <b>Returns : </b>        <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/number" target="_blank" >number</a></code>
+
+                                </div>
+                        </td>
+                    </tr>
 
             </tbody>
         </table>
@@ -558,9 +621,22 @@
                 </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="69" class="link-to-prism">lib/src/components/explorer/src/section/explorer-section.component.ts:69</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="89" class="link-to-prism">lib/src/components/explorer/src/section/explorer-section.component.ts:89</a></div>
                                 </td>
                             </tr>
+                    <tr>
+                        <td class="col-md-4">
+                                <div class="io-description"><p>Gets the scroll height of the section.</p>
+</div>
+
+                                <div>
+                                </div>
+                                <div class="io-description">
+                                    <b>Returns : </b>        <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/string" target="_blank" >string</a></code>
+
+                                </div>
+                        </td>
+                    </tr>
 
             </tbody>
         </table>
@@ -580,9 +656,22 @@
                 </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="73" class="link-to-prism">lib/src/components/explorer/src/section/explorer-section.component.ts:73</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="97" class="link-to-prism">lib/src/components/explorer/src/section/explorer-section.component.ts:97</a></div>
                                 </td>
                             </tr>
+                    <tr>
+                        <td class="col-md-4">
+                                <div class="io-description"><p>Gets the current position in the paginated data.</p>
+</div>
+
+                                <div>
+                                </div>
+                                <div class="io-description">
+                                    <b>Returns : </b>        <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/number" target="_blank" >number</a></code>
+
+                                </div>
+                        </td>
+                    </tr>
 
             </tbody>
         </table>
@@ -606,6 +695,11 @@ import {LocalizePipe} from &quot;../../../../modules/locale&quot;;
 import {StopPropagationDirective} from &quot;../../../../modules/events&quot;;
 import {PlainObject} from &quot;../../../../global/vars&quot;;
 
+/**
+ * This component is responsible for rendering the explorer section UI,
+ * managing the state of selected rows, and providing methods for
+ * navigation and filtering of the displayed data.
+ */
 @Component({
   selector: &quot;section&quot;,
   standalone: true,
@@ -632,26 +726,50 @@ import {PlainObject} from &quot;../../../../global/vars&quot;;
 })
 export class ExplorerSectionComponent {
 
+  /**
+   * ViewModel for the explorer section component.
+   */
   readonly vm &#x3D; inject(ExplorerSectionViewModel);
 
+  /**
+   * Class binding for dialog mode.
+   * @returns {boolean} Indicates if the component is in dialog mode.
+   */
   @HostBinding(&quot;class.dialogMode&quot;)
-  get cssClass() {
+  get cssClass(): boolean {
     return this.vm.dialogMode;
   }
 
-  get selectedRowsCount() {
+  /**
+   * Gets the count of selected rows.
+   * @returns {number} The count of selected rows.
+   */
+  get selectedRowsCount(): number {
     return Object.keys(this.vm.selectedRows()).length;
   }
 
-  get scrollHeight() {
+  /**
+   * Gets the scroll height of the section.
+   * @returns {string | undefined} The calculated height based on dialog mode.
+   */
+  get scrollHeight(): string {
     return this.vm.dialogMode ? undefined : &quot;calc(100vh - var(--header-bar-h) - var(--paginator-h))&quot;;
   }
 
-  get currentPos() {
+  /**
+   * Gets the current position in the paginated data.
+   * @returns {number} The current position.
+   */
+  get currentPos(): number {
     return ((this.vm.pageableData?.currentPage ?? 1) - 1) * (this.vm.pageableData?.pageSize ?? 0);
   }
 
-  isSelected(item: PlainObject) {
+  /**
+   * Checks if an item is selected.
+   * @param item The item to check for selection.
+   * @returns {boolean} True if the item is selected, otherwise false.
+   */
+  isSelected(item: PlainObject): boolean {
     if (!this.vm.multiselect) {
       return false;
     }
@@ -659,7 +777,12 @@ export class ExplorerSectionComponent {
     return this.vm.selectedRows()[pk] !&#x3D;&#x3D; undefined;
   }
 
-  propertyFilter(propName: string) {
+  /**
+   * Gets the filter value for a specified property.
+   * @param propName The name of the property to filter by.
+   * @returns {string | undefined} The filter value or undefined if not set.
+   */
+  propertyFilter(propName: string): string {
     const filterObject &#x3D; this.vm.getParsedFilter();
     if (!filterObject || !filterObject[propName]) {
       return undefined;
