--- a/components/StartProcessActionRendererComponent.html
+++ b/components/StartProcessActionRendererComponent.html
@@ -120,6 +120,13 @@
 </p>
 
 
+    <p class="comment">
+        <h3>Description</h3>
+    </p>
+    <p class="comment">
+        <p>This component allows users to start a process and handle the action state.</p>
+
+    </p>
 
     <p class="comment">
         <h3>Extends</h3>
@@ -325,14 +332,16 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="80"
-                                    class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/process/start/start-process-action-renderer.component.ts:80</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="98"
+                                    class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/process/start/start-process-action-renderer.component.ts:98</a></div>
                         </td>
                     </tr>
 
 
             <tr>
                 <td class="col-md-4">
+                        <div class="io-description"><p>Initializes the component and subscribes to control value changes.</p>
+</div>
 
                         <div class="io-description">
                             <b>Returns : </b>        <code><a href="https://www.typescriptlang.org/docs/handbook/basic-types.html" target="_blank" >void</a></code>
@@ -362,14 +371,16 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="90"
-                                    class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/process/start/start-process-action-renderer.component.ts:90</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="111"
+                                    class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/process/start/start-process-action-renderer.component.ts:111</a></div>
                         </td>
                     </tr>
 
 
             <tr>
                 <td class="col-md-4">
+                        <div class="io-description"><p>Starts the associated process.</p>
+</div>
 
                         <div class="io-description">
                             <b>Returns : </b>        <code><a href="https://www.typescriptlang.org/docs/handbook/basic-types.html" target="_blank" >void</a></code>
@@ -405,7 +416,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="65" class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/process/start/start-process-action-renderer.component.ts:65</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="68" class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/process/start/start-process-action-renderer.component.ts:68</a></div>
                         </td>
                     </tr>
 
@@ -432,7 +443,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="66" class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/process/start/start-process-action-renderer.component.ts:66</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="69" class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/process/start/start-process-action-renderer.component.ts:69</a></div>
                         </td>
                     </tr>
 
@@ -459,7 +470,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="63" class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/process/start/start-process-action-renderer.component.ts:63</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="66" class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/process/start/start-process-action-renderer.component.ts:66</a></div>
                         </td>
                     </tr>
 
@@ -486,7 +497,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="64" class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/process/start/start-process-action-renderer.component.ts:64</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="67" class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/process/start/start-process-action-renderer.component.ts:67</a></div>
                         </td>
                     </tr>
 
@@ -518,11 +529,17 @@
                         </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in         <code><a href="../classes/AbstractExplorerActionRenderer.html#source" target="_self" >AbstractExplorerActionRenderer:25</a></code>
+                                <div class="io-line">Defined in         <code><a href="../classes/AbstractExplorerActionRenderer.html#source" target="_self" >AbstractExplorerActionRenderer:34</a></code>
 </div>
                         </td>
                     </tr>
 
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-description"><p>The action-data to be rendered.</p>
+</div>
+                </td>
+            </tr>
 
         </tbody>
     </table>
@@ -551,11 +568,17 @@
                         </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in         <code><a href="../classes/AbstractExplorerActionRenderer.html#source" target="_self" >AbstractExplorerActionRenderer:23</a></code>
+                                <div class="io-line">Defined in         <code><a href="../classes/AbstractExplorerActionRenderer.html#source" target="_self" >AbstractExplorerActionRenderer:30</a></code>
 </div>
                         </td>
                     </tr>
 
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-description"><p>The data for the actions to be rendered.</p>
+</div>
+                </td>
+            </tr>
 
         </tbody>
     </table>
@@ -584,11 +607,17 @@
                         </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in         <code><a href="../classes/AbstractExplorerActionRenderer.html#source" target="_self" >AbstractExplorerActionRenderer:24</a></code>
+                                <div class="io-line">Defined in         <code><a href="../classes/AbstractExplorerActionRenderer.html#source" target="_self" >AbstractExplorerActionRenderer:32</a></code>
 </div>
                         </td>
                     </tr>
 
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-description"><p>The form group managing the entity data associated with the actions.</p>
+</div>
+                </td>
+            </tr>
 
         </tbody>
     </table>
@@ -617,11 +646,17 @@
                         </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in         <code><a href="../classes/AbstractExplorerActionRenderer.html#source" target="_self" >AbstractExplorerActionRenderer:22</a></code>
+                                <div class="io-line">Defined in         <code><a href="../classes/AbstractExplorerActionRenderer.html#source" target="_self" >AbstractExplorerActionRenderer:28</a></code>
 </div>
                         </td>
                     </tr>
 
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-description"><p>The target data associated with the actions.</p>
+</div>
+                </td>
+            </tr>
 
         </tbody>
     </table>
@@ -647,9 +682,18 @@
                 </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="68" class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/process/start/start-process-action-renderer.component.ts:68</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="75" class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/process/start/start-process-action-renderer.component.ts:75</a></div>
                                 </td>
                             </tr>
+                    <tr>
+                        <td class="col-md-4">
+                                <div class="io-description"><p>Gets the value of the enabled control from the entity form.</p>
+</div>
+
+                                <div>
+                                </div>
+                        </td>
+                    </tr>
 
             </tbody>
         </table>
@@ -669,9 +713,18 @@
                 </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="72" class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/process/start/start-process-action-renderer.component.ts:72</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="83" class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/process/start/start-process-action-renderer.component.ts:83</a></div>
                                 </td>
                             </tr>
+                    <tr>
+                        <td class="col-md-4">
+                                <div class="io-description"><p>Gets the current status control value from the entity form.</p>
+</div>
+
+                                <div>
+                                </div>
+                        </td>
+                    </tr>
 
             </tbody>
         </table>
@@ -691,9 +744,18 @@
                 </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="76" class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/process/start/start-process-action-renderer.component.ts:76</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="91" class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/process/start/start-process-action-renderer.component.ts:91</a></div>
                                 </td>
                             </tr>
+                    <tr>
+                        <td class="col-md-4">
+                                <div class="io-description"><p>Gets the channel for the preloader.</p>
+</div>
+
+                                <div>
+                                </div>
+                        </td>
+                    </tr>
 
             </tbody>
         </table>
@@ -732,6 +794,9 @@ import {
 } from &quot;../../../../../../../../global/vars&quot;;
 import {usePreloader} from &quot;../../../../../../../../modules/preloader/src/use-preloader&quot;;
 
+/**
+ * This component allows users to start a process and handle the action state.
+ */
 @Component({
   selector: &quot;start-process-action-renderer&quot;,
   standalone: true,
@@ -753,18 +818,33 @@ export class StartProcessActionRendererComponent extends AbstractExplorerActionR
   private readonly cdr &#x3D; inject(ChangeDetectorRef);
   private readonly injector &#x3D; inject(Injector);
 
+  /**
+   * Gets the value of the enabled control from the entity form.
+   * @returns The enabled control value.
+   */
   get enabledCtrlValue() {
     return this.entityForm().controls.enabled.value as boolean;
   }
 
+  /**
+   * Gets the current status control value from the entity form.
+   * @returns The current status of the process.
+   */
   get statusControlValue() {
     return this.entityForm().controls.status.value as ProcessStatus;
   }
 
+  /**
+   * Gets the channel for the preloader.
+   * @returns The preloader channel identifier.
+   */
   get preloaderChannel() {
     return Explorer.ObjectPreloaderCn;
   }
 
+  /**
+   * Initializes the component and subscribes to control value changes.
+   */
   ngOnInit() {
     runInInjectionContext(this.injector, () &#x3D;&gt; {
       this.entityForm().controls.status.valueChanges
@@ -775,6 +855,9 @@ export class StartProcessActionRendererComponent extends AbstractExplorerActionR
     });
   }
 
+  /**
+   * Starts the associated process.
+   */
   start() {
     this.service.start((this.data() as ProcessUnit).code).pipe(
       usePreloader(this.store, this.preloaderChannel),
