--- a/components/ToggleProcessActionRendererComponent.html
+++ b/components/ToggleProcessActionRendererComponent.html
@@ -120,6 +120,13 @@
 </p>
 
 
+    <p class="comment">
+        <h3>Description</h3>
+    </p>
+    <p class="comment">
+        <p>This component allows users to enable or disable a process and handles state changes.</p>
+
+    </p>
 
     <p class="comment">
         <h3>Extends</h3>
@@ -322,14 +329,16 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="71"
-                                    class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/process/toggle/toggle-process-action-renderer.component.ts:71</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="85"
+                                    class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/process/toggle/toggle-process-action-renderer.component.ts:85</a></div>
                         </td>
                     </tr>
 
 
             <tr>
                 <td class="col-md-4">
+                        <div class="io-description"><p>Initializes the component and subscribes to control value changes.</p>
+</div>
 
                         <div class="io-description">
                             <b>Returns : </b>        <code><a href="https://www.typescriptlang.org/docs/handbook/basic-types.html" target="_blank" >void</a></code>
@@ -359,14 +368,16 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="81"
-                                    class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/process/toggle/toggle-process-action-renderer.component.ts:81</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="98"
+                                    class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/process/toggle/toggle-process-action-renderer.component.ts:98</a></div>
                         </td>
                     </tr>
 
 
             <tr>
                 <td class="col-md-4">
+                        <div class="io-description"><p>Toggles the enabled state of the associated process.</p>
+</div>
 
                         <div class="io-description">
                             <b>Returns : </b>        <code><a href="https://www.typescriptlang.org/docs/handbook/basic-types.html" target="_blank" >void</a></code>
@@ -402,7 +413,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="60" class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/process/toggle/toggle-process-action-renderer.component.ts:60</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="63" class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/process/toggle/toggle-process-action-renderer.component.ts:63</a></div>
                         </td>
                     </tr>
 
@@ -429,7 +440,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="61" class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/process/toggle/toggle-process-action-renderer.component.ts:61</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="64" class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/process/toggle/toggle-process-action-renderer.component.ts:64</a></div>
                         </td>
                     </tr>
 
@@ -456,7 +467,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="58" class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/process/toggle/toggle-process-action-renderer.component.ts:58</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="61" class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/process/toggle/toggle-process-action-renderer.component.ts:61</a></div>
                         </td>
                     </tr>
 
@@ -483,7 +494,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="59" class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/process/toggle/toggle-process-action-renderer.component.ts:59</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="62" class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/process/toggle/toggle-process-action-renderer.component.ts:62</a></div>
                         </td>
                     </tr>
 
@@ -515,11 +526,17 @@
                         </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in         <code><a href="../classes/AbstractExplorerActionRenderer.html#source" target="_self" >AbstractExplorerActionRenderer:25</a></code>
+                                <div class="io-line">Defined in         <code><a href="../classes/AbstractExplorerActionRenderer.html#source" target="_self" >AbstractExplorerActionRenderer:34</a></code>
 </div>
                         </td>
                     </tr>
 
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-description"><p>The action-data to be rendered.</p>
+</div>
+                </td>
+            </tr>
 
         </tbody>
     </table>
@@ -548,11 +565,17 @@
                         </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in         <code><a href="../classes/AbstractExplorerActionRenderer.html#source" target="_self" >AbstractExplorerActionRenderer:23</a></code>
+                                <div class="io-line">Defined in         <code><a href="../classes/AbstractExplorerActionRenderer.html#source" target="_self" >AbstractExplorerActionRenderer:30</a></code>
 </div>
                         </td>
                     </tr>
 
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-description"><p>The data for the actions to be rendered.</p>
+</div>
+                </td>
+            </tr>
 
         </tbody>
     </table>
@@ -581,11 +604,17 @@
                         </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in         <code><a href="../classes/AbstractExplorerActionRenderer.html#source" target="_self" >AbstractExplorerActionRenderer:24</a></code>
+                                <div class="io-line">Defined in         <code><a href="../classes/AbstractExplorerActionRenderer.html#source" target="_self" >AbstractExplorerActionRenderer:32</a></code>
 </div>
                         </td>
                     </tr>
 
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-description"><p>The form group managing the entity data associated with the actions.</p>
+</div>
+                </td>
+            </tr>
 
         </tbody>
     </table>
@@ -614,11 +643,17 @@
                         </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in         <code><a href="../classes/AbstractExplorerActionRenderer.html#source" target="_self" >AbstractExplorerActionRenderer:22</a></code>
+                                <div class="io-line">Defined in         <code><a href="../classes/AbstractExplorerActionRenderer.html#source" target="_self" >AbstractExplorerActionRenderer:28</a></code>
 </div>
                         </td>
                     </tr>
 
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-description"><p>The target data associated with the actions.</p>
+</div>
+                </td>
+            </tr>
 
         </tbody>
     </table>
@@ -644,9 +679,18 @@
                 </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="63" class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/process/toggle/toggle-process-action-renderer.component.ts:63</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="70" class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/process/toggle/toggle-process-action-renderer.component.ts:70</a></div>
                                 </td>
                             </tr>
+                    <tr>
+                        <td class="col-md-4">
+                                <div class="io-description"><p>Gets the value of the enabled control from the entity form.</p>
+</div>
+
+                                <div>
+                                </div>
+                        </td>
+                    </tr>
 
             </tbody>
         </table>
@@ -666,9 +710,18 @@
                 </tr>
                             <tr>
                                 <td class="col-md-4">
-                                    <div class="io-line">Defined in <a href="" data-line="67" class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/process/toggle/toggle-process-action-renderer.component.ts:67</a></div>
+                                    <div class="io-line">Defined in <a href="" data-line="78" class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/process/toggle/toggle-process-action-renderer.component.ts:78</a></div>
                                 </td>
                             </tr>
+                    <tr>
+                        <td class="col-md-4">
+                                <div class="io-description"><p>Gets the channel for the preloader.</p>
+</div>
+
+                                <div>
+                                </div>
+                        </td>
+                    </tr>
 
             </tbody>
         </table>
@@ -702,6 +755,9 @@ import {Explorer, ExplorerEvent} from &quot;../../../../../../../explorer&quot;;
 import {ProcessUnit, ToastData, ToastEvent} from &quot;../../../../../../../../global/vars&quot;;
 import {usePreloader} from &quot;../../../../../../../../modules/preloader/src/use-preloader&quot;;
 
+/**
+ * This component allows users to enable or disable a process and handles state changes.
+ */
 @Component({
   selector: &quot;toggle-process-action-renderer&quot;,
   standalone: true,
@@ -723,14 +779,25 @@ export class ToggleProcessActionRendererComponent extends AbstractExplorerAction
   private readonly cdr &#x3D; inject(ChangeDetectorRef);
   private readonly injector &#x3D; inject(Injector);
 
+  /**
+   * Gets the value of the enabled control from the entity form.
+   * @returns The enabled control value.
+   */
   get enabledCtrlValue() {
     return this.entityForm().controls.enabled.value as boolean;
   }
 
+  /**
+   * Gets the channel for the preloader.
+   * @returns The preloader channel identifier.
+   */
   get preloaderChannel() {
     return Explorer.ObjectPreloaderCn;
   }
 
+  /**
+   * Initializes the component and subscribes to control value changes.
+   */
   ngOnInit() {
     runInInjectionContext(this.injector, () &#x3D;&gt; {
       this.entityForm().controls.enabled.valueChanges
@@ -741,6 +808,9 @@ export class ToggleProcessActionRendererComponent extends AbstractExplorerAction
     });
   }
 
+  /**
+   * Toggles the enabled state of the associated process.
+   */
   toggle() {
     this.service.toggle((this.data() as ProcessUnit).code).pipe(
       usePreloader(this.store, this.preloaderChannel),
