--- a/components/UpdateMediaFileActionRendererComponent.html
+++ b/components/UpdateMediaFileActionRendererComponent.html
@@ -120,6 +120,13 @@
 </p>
 
 
+    <p class="comment">
+        <h3>Description</h3>
+    </p>
+    <p class="comment">
+        <p>This component provides functionality to open a dialog for updating a media file.</p>
+
+    </p>
 
     <p class="comment">
         <h3>Extends</h3>
@@ -284,14 +291,18 @@
 
                     <tr>
                         <td class="col-md-4">
-                            <div class="io-line">Defined in <a href="" data-line="47"
-                                    class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/media/update/update-media-file-action-renderer.component.ts:47</a></div>
+                            <div class="io-line">Defined in <a href="" data-line="55"
+                                    class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/media/update/update-media-file-action-renderer.component.ts:55</a></div>
                         </td>
                     </tr>
 
 
             <tr>
                 <td class="col-md-4">
+                        <div class="io-description"><p>This method loads the dialog component dynamically and opens it,
+passing the current media data as dialog data. It subscribes to
+the dialog&#39;s close event to reload the object in the explorer.</p>
+</div>
 
                         <div class="io-description">
                             <b>Returns : </b>        <code><a href="https://www.typescriptlang.org/docs/handbook/basic-types.html" target="_blank" >void</a></code>
@@ -327,7 +338,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="43" class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/media/update/update-media-file-action-renderer.component.ts:43</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="46" class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/media/update/update-media-file-action-renderer.component.ts:46</a></div>
                         </td>
                     </tr>
 
@@ -354,7 +365,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="45" class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/media/update/update-media-file-action-renderer.component.ts:45</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="48" class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/media/update/update-media-file-action-renderer.component.ts:48</a></div>
                         </td>
                     </tr>
 
@@ -381,7 +392,7 @@
                 </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="44" class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/media/update/update-media-file-action-renderer.component.ts:44</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="47" class="link-to-prism">lib/src/components/explorer/src/renderer/custom/action/media/update/update-media-file-action-renderer.component.ts:47</a></div>
                         </td>
                     </tr>
 
@@ -413,11 +424,17 @@
                         </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in         <code><a href="../classes/AbstractExplorerActionRenderer.html#source" target="_self" >AbstractExplorerActionRenderer:25</a></code>
+                                <div class="io-line">Defined in         <code><a href="../classes/AbstractExplorerActionRenderer.html#source" target="_self" >AbstractExplorerActionRenderer:34</a></code>
 </div>
                         </td>
                     </tr>
 
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-description"><p>The action-data to be rendered.</p>
+</div>
+                </td>
+            </tr>
 
         </tbody>
     </table>
@@ -446,11 +463,17 @@
                         </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in         <code><a href="../classes/AbstractExplorerActionRenderer.html#source" target="_self" >AbstractExplorerActionRenderer:23</a></code>
+                                <div class="io-line">Defined in         <code><a href="../classes/AbstractExplorerActionRenderer.html#source" target="_self" >AbstractExplorerActionRenderer:30</a></code>
 </div>
                         </td>
                     </tr>
 
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-description"><p>The data for the actions to be rendered.</p>
+</div>
+                </td>
+            </tr>
 
         </tbody>
     </table>
@@ -479,11 +502,17 @@
                         </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in         <code><a href="../classes/AbstractExplorerActionRenderer.html#source" target="_self" >AbstractExplorerActionRenderer:24</a></code>
+                                <div class="io-line">Defined in         <code><a href="../classes/AbstractExplorerActionRenderer.html#source" target="_self" >AbstractExplorerActionRenderer:32</a></code>
 </div>
                         </td>
                     </tr>
 
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-description"><p>The form group managing the entity data associated with the actions.</p>
+</div>
+                </td>
+            </tr>
 
         </tbody>
     </table>
@@ -512,11 +541,17 @@
                         </tr>
                     <tr>
                         <td class="col-md-4">
-                                <div class="io-line">Defined in         <code><a href="../classes/AbstractExplorerActionRenderer.html#source" target="_self" >AbstractExplorerActionRenderer:22</a></code>
+                                <div class="io-line">Defined in         <code><a href="../classes/AbstractExplorerActionRenderer.html#source" target="_self" >AbstractExplorerActionRenderer:28</a></code>
 </div>
                         </td>
                     </tr>
 
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-description"><p>The target data associated with the actions.</p>
+</div>
+                </td>
+            </tr>
 
         </tbody>
     </table>
@@ -539,6 +574,9 @@ import {Store} from &quot;../../../../../../../../modules/store&quot;;
 import {Media} from &quot;../../../../../../../../modules/media&quot;;
 import {ExplorerEvent} from &quot;../../../../../../../explorer&quot;;
 
+/**
+ * This component provides functionality to open a dialog for updating a media file.
+ */
 @Component({
   selector: &quot;update-media-file-action-renderer&quot;,
   standalone: true,
@@ -556,6 +594,11 @@ export class UpdateMediaFileActionRendererComponent extends AbstractExplorerActi
   private readonly ts &#x3D; inject(TranslocoService);
   private readonly store &#x3D; inject(Store);
 
+  /**
+   * This method loads the dialog component dynamically and opens it,
+   * passing the current media data as dialog data. It subscribes to
+   * the dialog&#x27;s close event to reload the object in the explorer.
+   */
   updateMedia() {
     import(&quot;./dialog/update-media-file-action-dialog.component&quot;).then(m &#x3D;&gt; {
       this.dialogService.open(m.UpdateMediaFileActionDialogComponent, {
